@@ -18,8 +18,8 @@ import org.cloudfoundry.identity.uaa.oauth.token.AccessTokenProviderChain;
 import org.cloudfoundry.identity.uaa.oauth.token.AccessTokenRequest;
 import org.cloudfoundry.identity.uaa.oauth.token.ClientTokenServices;
 import org.cloudfoundry.identity.uaa.oauth.token.DefaultAccessTokenRequest;
-import org.junit.After;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.authentication.AnonymousAuthenticationToken;
@@ -28,14 +28,13 @@ import org.springframework.security.authentication.UsernamePasswordAuthenticatio
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 
-import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collections;
 import java.util.Date;
+import java.util.List;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertSame;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatExceptionOfType;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.spy;
@@ -45,7 +44,7 @@ import static org.mockito.Mockito.when;
  * Moved test class of from spring-security-oauth2 into UAA
  * Scope: Test class
  */
-public class AccessTokenProviderChainTests {
+class AccessTokenProviderChainTests {
 
     private BaseOAuth2ProtectedResourceDetails resource;
 
@@ -54,7 +53,7 @@ public class AccessTokenProviderChainTests {
     private final DefaultOAuth2AccessToken refreshedToken = new DefaultOAuth2AccessToken("BAR");
 
     private final UsernamePasswordAuthenticationToken user = new UsernamePasswordAuthenticationToken("foo", "bar",
-            Arrays.asList(new SimpleGrantedAuthority("ROLE_USER")));
+            List.of(new SimpleGrantedAuthority("ROLE_USER")));
 
     private final ClientTokenServices clientTokenServices = Mockito.mock(ClientTokenServices.class);
 
@@ -63,122 +62,125 @@ public class AccessTokenProviderChainTests {
         resource.setId("resource");
     }
 
-    @After
-    public void close() {
+    @AfterEach
+    void close() {
         SecurityContextHolder.clearContext();
     }
 
     @Test
-    public void testSunnyDay() throws Exception {
-        AccessTokenProviderChain chain = new AccessTokenProviderChain(Arrays.asList(new StubAccessTokenProvider()));
+    void sunnyDay() {
+        AccessTokenProviderChain chain = new AccessTokenProviderChain(List.of(new StubAccessTokenProvider()));
         AccessTokenRequest request = new DefaultAccessTokenRequest();
         SecurityContextHolder.getContext().setAuthentication(user);
         OAuth2AccessToken token = chain.obtainAccessToken(resource, request);
-        assertNotNull(token);
+        assertThat(token).isNotNull();
     }
 
     @Test
-    public void testSunnyDayWithTokenServicesGet() throws Exception {
-        AccessTokenProviderChain chain = new AccessTokenProviderChain(Collections.<AccessTokenProvider>emptyList());
+    void sunnyDayWithTokenServicesGet() {
+        AccessTokenProviderChain chain = new AccessTokenProviderChain(Collections.emptyList());
         when(clientTokenServices.getAccessToken(resource, user)).thenReturn(accessToken);
         chain.setClientTokenServices(clientTokenServices);
         AccessTokenRequest request = new DefaultAccessTokenRequest();
         SecurityContextHolder.getContext().setAuthentication(user);
         OAuth2AccessToken token = chain.obtainAccessToken(resource, request);
-        assertEquals(accessToken, token);
+        assertThat(token).isEqualTo(accessToken);
         Mockito.verify(clientTokenServices).saveAccessToken(resource, user, token);
     }
 
     @Test
-    public void testSunnyDayWithTokenServicesSave() throws Exception {
-        AccessTokenProviderChain chain = new AccessTokenProviderChain(Arrays.asList(new StubAccessTokenProvider()));
+    void sunnyDayWithTokenServicesSave() {
+        AccessTokenProviderChain chain = new AccessTokenProviderChain(List.of(new StubAccessTokenProvider()));
         chain.setClientTokenServices(clientTokenServices);
         AccessTokenRequest request = new DefaultAccessTokenRequest();
         SecurityContextHolder.getContext().setAuthentication(user);
         OAuth2AccessToken token = chain.obtainAccessToken(resource, request);
-        assertNotNull(token);
+        assertThat(token).isNotNull();
         Mockito.verify(clientTokenServices).saveAccessToken(resource, user, token);
     }
 
     @Test
-    public void testSunnyDayClientCredentialsWithTokenServicesSave() throws Exception {
-        AccessTokenProviderChain chain = new AccessTokenProviderChain(Arrays.asList(new StubAccessTokenProvider()));
+    void sunnyDayClientCredentialsWithTokenServicesSave() {
+        AccessTokenProviderChain chain = new AccessTokenProviderChain(List.of(new StubAccessTokenProvider()));
         chain.setClientTokenServices(clientTokenServices);
         AccessTokenRequest request = new DefaultAccessTokenRequest();
         resource = new ClientCredentialsResourceDetails();
         resource.setId("resource");
         OAuth2AccessToken token = chain.obtainAccessToken(resource, request);
-        assertNotNull(token);
+        assertThat(token).isNotNull();
         Mockito.verify(clientTokenServices).saveAccessToken(resource, null, token);
     }
 
     @Test
-    public void testSunnyDayWithExpiredToken() throws Exception {
-        AccessTokenProviderChain chain = new AccessTokenProviderChain(Arrays.asList(new StubAccessTokenProvider()));
+    void sunnyDayWithExpiredToken() {
+        AccessTokenProviderChain chain = new AccessTokenProviderChain(List.of(new StubAccessTokenProvider()));
         accessToken.setExpiration(new Date(System.currentTimeMillis() - 1000));
         AccessTokenRequest request = new DefaultAccessTokenRequest();
         request.setExistingToken(accessToken);
         SecurityContextHolder.getContext().setAuthentication(user);
         OAuth2AccessToken token = chain.obtainAccessToken(resource, request);
-        assertNotNull(token);
+        assertThat(token).isNotNull();
     }
 
     @Test
-    public void testSunnyDayWithExpiredTokenAndTokenServices() throws Exception {
-        AccessTokenProviderChain chain = new AccessTokenProviderChain(Arrays.asList(new StubAccessTokenProvider()));
+    void sunnyDayWithExpiredTokenAndTokenServices() {
+        AccessTokenProviderChain chain = new AccessTokenProviderChain(List.of(new StubAccessTokenProvider()));
         chain.setClientTokenServices(clientTokenServices);
         accessToken.setExpiration(new Date(System.currentTimeMillis() - 1000));
         when(clientTokenServices.getAccessToken(resource, user)).thenReturn(accessToken);
         AccessTokenRequest request = new DefaultAccessTokenRequest();
         SecurityContextHolder.getContext().setAuthentication(user);
         OAuth2AccessToken token = chain.obtainAccessToken(resource, request);
-        assertNotNull(token);
+        assertThat(token).isNotNull();
         Mockito.verify(clientTokenServices).removeAccessToken(resource, user);
         Mockito.verify(clientTokenServices).saveAccessToken(resource, user, token);
     }
 
     @Test
-    public void testSunnyDayWithExpiredTokenAndValidRefreshToken() throws Exception {
-        AccessTokenProviderChain chain = new AccessTokenProviderChain(Arrays.asList(new StubAccessTokenProvider()));
+    void sunnyDayWithExpiredTokenAndValidRefreshToken() {
+        AccessTokenProviderChain chain = new AccessTokenProviderChain(List.of(new StubAccessTokenProvider()));
         accessToken.setExpiration(new Date(System.currentTimeMillis() - 1000));
         accessToken.setRefreshToken(new DefaultOAuth2RefreshToken("EXP"));
         AccessTokenRequest request = new DefaultAccessTokenRequest();
         request.setExistingToken(accessToken);
         SecurityContextHolder.getContext().setAuthentication(user);
         OAuth2AccessToken token = chain.obtainAccessToken(resource, request);
-        assertNotNull(token);
-        assertEquals(refreshedToken, token);
+        assertThat(token)
+                .isNotNull()
+                .isEqualTo(refreshedToken);
     }
 
     @Test
-    public void testSunnyDayWithTokenWithinClockSkewWindowAndValidRefreshToken() throws Exception {
-        AccessTokenProviderChain chain = new AccessTokenProviderChain(Arrays.asList(new StubAccessTokenProvider()));
+    void sunnyDayWithTokenWithinClockSkewWindowAndValidRefreshToken() {
+        AccessTokenProviderChain chain = new AccessTokenProviderChain(List.of(new StubAccessTokenProvider()));
         accessToken.setExpiration(new Date(System.currentTimeMillis() + 1000));
         accessToken.setRefreshToken(new DefaultOAuth2RefreshToken("EXP"));
         AccessTokenRequest request = new DefaultAccessTokenRequest();
         request.setExistingToken(accessToken);
         SecurityContextHolder.getContext().setAuthentication(user);
         OAuth2AccessToken token = chain.obtainAccessToken(resource, request);
-        assertNotNull(token);
-        assertEquals(refreshedToken, token);
+        assertThat(token)
+                .isNotNull()
+                .isEqualTo(refreshedToken);
     }
 
     @Test
-    public void testSunnyDayWithTokenOutsideClockSkewWindowAndValidRefreshToken() throws Exception {
-        AccessTokenProviderChain chain = new AccessTokenProviderChain(Arrays.asList(new StubAccessTokenProvider()));
+    void sunnyDayWithTokenOutsideClockSkewWindowAndValidRefreshToken() {
+        AccessTokenProviderChain chain = new AccessTokenProviderChain(List.of(new StubAccessTokenProvider()));
         accessToken.setExpiration(new Date(System.currentTimeMillis() + 31000));
         accessToken.setRefreshToken(new DefaultOAuth2RefreshToken("EXP"));
         AccessTokenRequest request = new DefaultAccessTokenRequest();
         request.setExistingToken(accessToken);
         SecurityContextHolder.getContext().setAuthentication(user);
         OAuth2AccessToken token = chain.obtainAccessToken(resource, request);
-        assertNotNull(token);
-        assertEquals(accessToken, token);
+        assertThat(token)
+                .isNotNull()
+                .isEqualTo(accessToken);
     }
 
-    @Test(expected = InvalidTokenException.class)
-    public void testSunnyDayWithExpiredTokenAndExpiredRefreshToken() throws Exception {
-        AccessTokenProviderChain chain = new AccessTokenProviderChain(Arrays.asList(new StubAccessTokenProvider()));
+    @Test
+    void sunnyDayWithExpiredTokenAndExpiredRefreshToken() {
+        AccessTokenProviderChain chain = new AccessTokenProviderChain(List.of(new StubAccessTokenProvider()));
         accessToken.setExpiration(new Date(System.currentTimeMillis() - 1000));
         DefaultOAuth2RefreshToken refreshToken = new DefaultExpiringOAuth2RefreshToken("EXP",
                 new Date(System.currentTimeMillis() - 1000));
@@ -186,15 +188,15 @@ public class AccessTokenProviderChainTests {
         AccessTokenRequest request = new DefaultAccessTokenRequest();
         request.setExistingToken(accessToken);
         SecurityContextHolder.getContext().setAuthentication(user);
-        OAuth2AccessToken token = chain.obtainAccessToken(resource, request);
-        assertNotNull(token);
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                chain.obtainAccessToken(resource, request));
     }
 
     @Test
-    public void testSunnyDayWithExpiredTokenAndExpiredRefreshTokenForClientCredentialsResource() {
+    void sunnyDayWithExpiredTokenAndExpiredRefreshTokenForClientCredentialsResource() {
         resource = new ClientCredentialsResourceDetails();
         resource.setId("resource");
-        AccessTokenProviderChain chain = new AccessTokenProviderChain(Arrays.asList(new StubAccessTokenProvider()));
+        AccessTokenProviderChain chain = new AccessTokenProviderChain(List.of(new StubAccessTokenProvider()));
         accessToken.setExpiration(new Date(System.currentTimeMillis() - 1000));
         DefaultOAuth2RefreshToken refreshToken = new DefaultExpiringOAuth2RefreshToken("EXP",
                 new Date(System.currentTimeMillis() - 1000));
@@ -203,47 +205,48 @@ public class AccessTokenProviderChainTests {
         request.setExistingToken(accessToken);
         SecurityContextHolder.getContext().setAuthentication(user);
         OAuth2AccessToken token = chain.obtainAccessToken(resource, request);
-        assertNotNull(token);
-        assertSame(accessToken, token);
-        assertSame(refreshToken, token.getRefreshToken());
+        assertThat(token)
+                .isNotNull()
+                .isSameAs(accessToken);
+        assertThat(token.getRefreshToken()).isSameAs(refreshToken);
     }
 
     @Test
-    public void testMissingSecurityContext() throws Exception {
-        AccessTokenProviderChain chain = new AccessTokenProviderChain(Arrays.asList(new StubAccessTokenProvider()));
+    void missingSecurityContext() {
+        AccessTokenProviderChain chain = new AccessTokenProviderChain(List.of(new StubAccessTokenProvider()));
         AccessTokenRequest request = new DefaultAccessTokenRequest();
         OAuth2AccessToken token = chain.obtainAccessToken(resource, request);
-        assertNotNull(token);
+        assertThat(token).isNotNull();
         // If there is no authentication to store it with a token is still acquired if
         // possible
     }
 
-    @Test(expected = InsufficientAuthenticationException.class)
-    public void testAnonymousUser() throws Exception {
-        AccessTokenProviderChain chain = new AccessTokenProviderChain(Arrays.asList(new StubAccessTokenProvider()));
+    @Test
+    void anonymousUser() {
+        AccessTokenProviderChain chain = new AccessTokenProviderChain(List.of(new StubAccessTokenProvider()));
         SecurityContextHolder.getContext()
                 .setAuthentication(new AnonymousAuthenticationToken("foo", "bar", user.getAuthorities()));
         AccessTokenRequest request = new DefaultAccessTokenRequest();
-        OAuth2AccessToken token = chain.obtainAccessToken(resource, request);
-        assertNotNull(token);
-    }
-
-    @Test(expected = UserRedirectRequiredException.class)
-    public void testRequiresAuthenticationButRedirected() throws Exception {
-        final AccessTokenRequest request = new DefaultAccessTokenRequest();
-        AccessTokenProviderChain chain = new AccessTokenProviderChain(Arrays.asList(new StubAccessTokenProvider() {
-            @Override
-            public OAuth2AccessToken obtainAccessToken(OAuth2ProtectedResourceDetails details,
-                    AccessTokenRequest parameters) throws UserRedirectRequiredException, AccessDeniedException {
-                throw new UserRedirectRequiredException("redirect test", request.toSingleValueMap());
-            }
-        }));
-        OAuth2AccessToken token = chain.obtainAccessToken(resource, request);
-        assertNotNull(token);
+        assertThatExceptionOfType(InsufficientAuthenticationException.class).isThrownBy(() ->
+                chain.obtainAccessToken(resource, request));
     }
 
     @Test
-    public void testRefreshAccessTokenReplacingNullValue() throws Exception {
+    void requiresAuthenticationButRedirected() {
+        final AccessTokenRequest request = new DefaultAccessTokenRequest();
+        AccessTokenProviderChain chain = new AccessTokenProviderChain(List.of(new StubAccessTokenProvider() {
+            @Override
+            public OAuth2AccessToken obtainAccessToken(OAuth2ProtectedResourceDetails details,
+                                                       AccessTokenRequest parameters) throws UserRedirectRequiredException, AccessDeniedException {
+                throw new UserRedirectRequiredException("redirect test", request.toSingleValueMap());
+            }
+        }));
+        assertThatExceptionOfType(UserRedirectRequiredException.class).isThrownBy(() ->
+                chain.obtainAccessToken(resource, request));
+    }
+
+    @Test
+    void refreshAccessTokenReplacingNullValue() {
         DefaultOAuth2AccessToken accessToken = getExpiredToken();
         DefaultOAuth2AccessToken refreshedAccessToken = new DefaultOAuth2AccessToken("refreshed-access-token");
         AccessTokenProviderChain chain = getTokenProvider(accessToken, refreshedAccessToken);
@@ -255,11 +258,11 @@ public class AccessTokenProviderChainTests {
         AccessTokenRequest request = new DefaultAccessTokenRequest();
         OAuth2AccessToken newAccessToken = chain.refreshAccessToken(resource, accessToken.getRefreshToken(), request);
         // gh-712
-        assertEquals(newAccessToken.getRefreshToken(), accessToken.getRefreshToken());
+        assertThat(accessToken.getRefreshToken()).isEqualTo(newAccessToken.getRefreshToken());
     }
 
     @Test
-    public void testRefreshAccessTokenKeepingOldValue() throws Exception {
+    void refreshAccessTokenKeepingOldValue() {
         DefaultOAuth2AccessToken accessToken = getExpiredToken();
         DefaultOAuth2AccessToken refreshedAccessToken = new DefaultOAuth2AccessToken("refreshed-access-token");
         refreshedAccessToken.setRefreshToken(new DefaultOAuth2RefreshToken("other-refresh-token"));
@@ -272,7 +275,7 @@ public class AccessTokenProviderChainTests {
         AccessTokenRequest request = new DefaultAccessTokenRequest();
         OAuth2AccessToken newAccessToken = chain.refreshAccessToken(resource, accessToken.getRefreshToken(), request);
         // gh-816
-        assertEquals(newAccessToken.getRefreshToken(), refreshedAccessToken.getRefreshToken());
+        assertThat(refreshedAccessToken.getRefreshToken()).isEqualTo(newAccessToken.getRefreshToken());
     }
 
     private DefaultOAuth2AccessToken getExpiredToken() {
@@ -285,7 +288,7 @@ public class AccessTokenProviderChainTests {
 
     // gh-712
     @Test
-    public void testRefreshAccessTokenTwicePreserveRefreshToken() throws Exception {
+    void refreshAccessTokenTwicePreserveRefreshToken() {
         DefaultOAuth2AccessToken accessToken = getExpiredToken();
         DefaultOAuth2AccessToken expectedRefreshedAccessToken = new DefaultOAuth2AccessToken("refreshed-access-token");
         expectedRefreshedAccessToken.setExpiration(accessToken.getExpiration());
@@ -298,30 +301,30 @@ public class AccessTokenProviderChainTests {
         AuthorizationCodeResourceDetails resource = new AuthorizationCodeResourceDetails();
         AccessTokenRequest request = new DefaultAccessTokenRequest();
         OAuth2AccessToken tokenResult = chain.obtainAccessToken(resource, request);
-        assertEquals(accessToken, tokenResult);
+        assertThat(tokenResult).isEqualTo(accessToken);
 
         // Obtain the 1st Refreshed Access Token
         Calendar tokenExpiry = Calendar.getInstance();
         tokenExpiry.setTime(tokenResult.getExpiration());
         tokenExpiry.add(Calendar.MINUTE, -1);
-        DefaultOAuth2AccessToken.class.cast(tokenResult).setExpiration(tokenExpiry.getTime()); // Expire
+        ((DefaultOAuth2AccessToken) tokenResult).setExpiration(tokenExpiry.getTime()); // Expire
         request = new DefaultAccessTokenRequest();
         request.setExistingToken(tokenResult);
         tokenResult = chain.obtainAccessToken(resource, request);
-        assertEquals(expectedRefreshedAccessToken, tokenResult);
+        assertThat(tokenResult).isEqualTo(expectedRefreshedAccessToken);
 
         // Obtain the 2nd Refreshed Access Token
         tokenExpiry.setTime(tokenResult.getExpiration());
         tokenExpiry.add(Calendar.MINUTE, -1);
-        DefaultOAuth2AccessToken.class.cast(tokenResult).setExpiration(tokenExpiry.getTime()); // Expire
+        ((DefaultOAuth2AccessToken) tokenResult).setExpiration(tokenExpiry.getTime()); // Expire
         request = new DefaultAccessTokenRequest();
         request.setExistingToken(tokenResult);
         tokenResult = chain.obtainAccessToken(resource, request);
-        assertEquals(expectedRefreshedAccessToken, tokenResult);
+        assertThat(tokenResult).isEqualTo(expectedRefreshedAccessToken);
     }
 
     private AccessTokenProviderChain getTokenProvider(DefaultOAuth2AccessToken accessToken,
-            DefaultOAuth2AccessToken refreshedAccessToken) {
+                                                      DefaultOAuth2AccessToken refreshedAccessToken) {
         AccessTokenProvider accessTokenProvider = new AuthorizationCodeAccessTokenProvider();
         accessTokenProvider = spy(accessTokenProvider);
         doReturn(accessToken).when(accessTokenProvider).obtainAccessToken(any(OAuth2ProtectedResourceDetails.class),
@@ -329,12 +332,12 @@ public class AccessTokenProviderChainTests {
         doReturn(refreshedAccessToken).when(accessTokenProvider).refreshAccessToken(
                 any(OAuth2ProtectedResourceDetails.class), any(OAuth2RefreshToken.class),
                 any(AccessTokenRequest.class));
-        return new AccessTokenProviderChain(Arrays.asList(accessTokenProvider));
+        return new AccessTokenProviderChain(List.of(accessTokenProvider));
     }
 
     private class StubAccessTokenProvider implements AccessTokenProvider {
         public OAuth2AccessToken obtainAccessToken(OAuth2ProtectedResourceDetails details,
-                AccessTokenRequest parameters) throws UserRedirectRequiredException, AccessDeniedException {
+                                                   AccessTokenRequest parameters) throws UserRedirectRequiredException, AccessDeniedException {
             return accessToken;
         }
 
@@ -343,7 +346,7 @@ public class AccessTokenProviderChainTests {
         }
 
         public OAuth2AccessToken refreshAccessToken(OAuth2ProtectedResourceDetails resource,
-                OAuth2RefreshToken refreshToken, AccessTokenRequest request) throws UserRedirectRequiredException {
+                                                    OAuth2RefreshToken refreshToken, AccessTokenRequest request) throws UserRedirectRequiredException {
             if (refreshToken instanceof ExpiringOAuth2RefreshToken token) {
                 if (token.getExpiration().getTime() < System
                         .currentTimeMillis()) {
@@ -358,5 +361,4 @@ public class AccessTokenProviderChainTests {
             return true;
         }
     }
-
 }
