@@ -10,13 +10,12 @@ import org.cloudfoundry.identity.uaa.oauth.client.resource.OAuth2AccessDeniedExc
 import org.cloudfoundry.identity.uaa.oauth.common.AuthenticationScheme;
 import org.cloudfoundry.identity.uaa.oauth.common.DefaultOAuth2RefreshToken;
 import org.cloudfoundry.identity.uaa.oauth.common.util.OAuth2Utils;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.http.client.ClientHttpRequestFactory;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
@@ -24,19 +23,20 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatExceptionOfType;
 import static org.cloudfoundry.identity.uaa.oauth.common.OAuth2AccessToken.BEARER_TYPE;
-import static org.junit.Assert.*;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-public class UaaTokenTests {
+class UaaTokenTests {
 
     private CompositeToken persistToken;
     private BaseOAuth2ProtectedResourceDetails resourceDetails;
     private AuthorizationCodeAccessTokenProvider authorizationCodeAccessTokenProvider;
 
-    @Before
-    public void setUp() throws Exception {
+    @BeforeEach
+    void setUp() throws Exception {
         persistToken = new CompositeToken("token-value");
         persistToken.setScope(Set.of("admin", "read", "write"));
         persistToken.setTokenType(BEARER_TYPE.toLowerCase());
@@ -49,108 +49,109 @@ public class UaaTokenTests {
     }
 
     @Test
-    public void getIdTokenValue() {
-        assertNull(persistToken.getIdTokenValue());
-        assertNull(resourceDetails.getId());
+    void getIdTokenValue() {
+        assertThat(persistToken.getIdTokenValue()).isNull();
+        assertThat(resourceDetails.getId()).isNull();
     }
 
     @Test
-    public void testHashCode() {
+    void testHashCode() {
         CompositeToken copyToken = new CompositeToken(persistToken);
-        assertEquals(copyToken.hashCode(), persistToken.hashCode());
-        assertEquals(resourceDetails.hashCode(), new BaseOAuth2ProtectedResourceDetails().hashCode());
+        assertThat(persistToken).hasSameHashCodeAs(copyToken);
+        assertThat(new BaseOAuth2ProtectedResourceDetails()).hasSameHashCodeAs(resourceDetails);
     }
 
     @Test
-    public void testEquals() {
+    void equals() {
         CompositeToken copyToken = new CompositeToken(persistToken);
-        assertEquals(copyToken, persistToken);
-        assertEquals(resourceDetails, new BaseOAuth2ProtectedResourceDetails());
+        assertThat(persistToken).isEqualTo(copyToken);
+        assertThat(new BaseOAuth2ProtectedResourceDetails()).isEqualTo(resourceDetails);
     }
 
     @Test
-    public void testOAuth2AccessDeniedException() {
+    void oAuth2AccessDeniedException() {
         OAuth2AccessDeniedException oAuth2AccessDeniedException = new OAuth2AccessDeniedException();
-        assertEquals(oAuth2AccessDeniedException.toString(), new OAuth2AccessDeniedException((BaseOAuth2ProtectedResourceDetails) null).toString());
-        assertNotEquals(oAuth2AccessDeniedException.toString(), new OAuth2AccessDeniedException("", resourceDetails).toString());
-        assertEquals("access_denied", oAuth2AccessDeniedException.getOAuth2ErrorCode());
-        assertEquals(403, oAuth2AccessDeniedException.getHttpErrorCode());
+        assertThat(new OAuth2AccessDeniedException((BaseOAuth2ProtectedResourceDetails) null)).hasToString(oAuth2AccessDeniedException.toString());
+        assertThat(new OAuth2AccessDeniedException("", resourceDetails).toString()).isNotEqualTo(oAuth2AccessDeniedException.toString());
+        assertThat(oAuth2AccessDeniedException.getOAuth2ErrorCode()).isEqualTo("access_denied");
+        assertThat(oAuth2AccessDeniedException.getHttpErrorCode()).isEqualTo(403);
     }
 
     @Test
-    public void testAccessTokenRequiredException() {
+    void accessTokenRequiredException() {
         AccessTokenRequiredException accessTokenRequiredException = new AccessTokenRequiredException(resourceDetails);
-        assertEquals(accessTokenRequiredException.toString(), new AccessTokenRequiredException(null).toString());
-        assertNotEquals(accessTokenRequiredException.toString(), new AccessTokenRequiredException("", resourceDetails).toString());
-        assertEquals(accessTokenRequiredException.toString(), new AccessTokenRequiredException("OAuth2 access denied.", resourceDetails, null).toString());
-        assertNotNull(accessTokenRequiredException.getResource());
+        assertThat(new AccessTokenRequiredException(null)).hasToString(accessTokenRequiredException.toString());
+        assertThat(new AccessTokenRequiredException("", resourceDetails).toString()).isNotEqualTo(accessTokenRequiredException.toString());
+        assertThat(new AccessTokenRequiredException("OAuth2 access denied.", resourceDetails, null)).hasToString(accessTokenRequiredException.toString());
+        assertThat(accessTokenRequiredException.getResource()).isNotNull();
     }
 
     @Test
-    public void testAccessTokenProviderChain() {
+    void accessTokenProviderChain() {
         AccessTokenProviderChain accessTokenProviderChain = new AccessTokenProviderChain(Collections.emptyList());
         ClientCredentialsAccessTokenProvider clientCredentialsAccessTokenProvider = new ClientCredentialsAccessTokenProvider();
-        assertFalse(accessTokenProviderChain.supportsResource(resourceDetails));
-        assertFalse(accessTokenProviderChain.supportsRefresh(resourceDetails));
-        accessTokenProviderChain = new AccessTokenProviderChain(Arrays.asList(clientCredentialsAccessTokenProvider));
-        assertTrue(accessTokenProviderChain.supportsResource(new ClientCredentialsResourceDetails()));
-        assertFalse(accessTokenProviderChain.supportsRefresh(new ClientCredentialsResourceDetails()));
-        assertTrue(authorizationCodeAccessTokenProvider.supportsRefresh(new AuthorizationCodeResourceDetails()));
-    }
-
-    @Test(expected = OAuth2AccessDeniedException.class)
-    public void testAccessTokenProviderChainException() {
-        ClientCredentialsAccessTokenProvider clientCredentialsAccessTokenProvider = new ClientCredentialsAccessTokenProvider();
-        AccessTokenProviderChain accessTokenProviderChain = new AccessTokenProviderChain(Arrays.asList(clientCredentialsAccessTokenProvider));
-        accessTokenProviderChain.refreshAccessToken(new ClientCredentialsResourceDetails(), new DefaultOAuth2RefreshToken(""), null);
+        assertThat(accessTokenProviderChain.supportsResource(resourceDetails)).isFalse();
+        assertThat(accessTokenProviderChain.supportsRefresh(resourceDetails)).isFalse();
+        accessTokenProviderChain = new AccessTokenProviderChain(List.of(clientCredentialsAccessTokenProvider));
+        assertThat(accessTokenProviderChain.supportsResource(new ClientCredentialsResourceDetails())).isTrue();
+        assertThat(accessTokenProviderChain.supportsRefresh(new ClientCredentialsResourceDetails())).isFalse();
+        assertThat(authorizationCodeAccessTokenProvider.supportsRefresh(new AuthorizationCodeResourceDetails())).isTrue();
     }
 
     @Test
-    public void testDefaultAccessTokenRequest() {
+    void accessTokenProviderChainException() {
+        ClientCredentialsAccessTokenProvider clientCredentialsAccessTokenProvider = new ClientCredentialsAccessTokenProvider();
+        AccessTokenProviderChain accessTokenProviderChain = new AccessTokenProviderChain(List.of(clientCredentialsAccessTokenProvider));
+        assertThatExceptionOfType(OAuth2AccessDeniedException.class).isThrownBy(() ->
+                accessTokenProviderChain.refreshAccessToken(new ClientCredentialsResourceDetails(), new DefaultOAuth2RefreshToken(""), null));
+    }
+
+    @Test
+    void defaultAccessTokenRequest() {
         DefaultAccessTokenRequest accessTokenRequest = new DefaultAccessTokenRequest();
-        MultiValueMap parameters = new LinkedMultiValueMap();
+        MultiValueMap parameters = new LinkedMultiValueMap<>();
         parameters.add("empty", "");
         accessTokenRequest.setCookie("cookie-value");
         accessTokenRequest.setHeaders(null);
         // maintain
-        assertTrue(accessTokenRequest.isEmpty());
+        assertThat(accessTokenRequest).isEmpty();
         accessTokenRequest.set("key", "value");
-        assertFalse(accessTokenRequest.isEmpty());
+        assertThat(accessTokenRequest).isNotEmpty();
         accessTokenRequest.addAll(parameters);
         accessTokenRequest.clear();
         accessTokenRequest.add("key", "value");
-        assertEquals(Set.of("key"), accessTokenRequest.keySet());
-        assertEquals(List.of(List.of("value")).toString(), accessTokenRequest.values().toString());
+        assertThat(accessTokenRequest.keySet()).isEqualTo(Set.of("key"));
+        assertThat(accessTokenRequest.values()).hasToString(List.of(List.of("value")).toString());
 
         // parameters
         accessTokenRequest.clear();
-        assertTrue(accessTokenRequest.isEmpty());
+        assertThat(accessTokenRequest).isEmpty();
         accessTokenRequest.addAll("key", List.of("value"));
         accessTokenRequest.setAll(parameters);
         accessTokenRequest.putAll(parameters);
         accessTokenRequest.put("key", List.of("value"));
-        assertFalse(accessTokenRequest.isEmpty());
+        assertThat(accessTokenRequest).isNotEmpty();
 
         // object compare
         accessTokenRequest.clear();
-        parameters = new LinkedMultiValueMap();
+        parameters = new LinkedMultiValueMap<>();
         parameters.addAll("key", List.of("value"));
-        assertEquals(accessTokenRequest, new DefaultAccessTokenRequest(null));
+        assertThat(new DefaultAccessTokenRequest(null)).isEqualTo(accessTokenRequest);
         DefaultAccessTokenRequest newAccessTokenRequest = new DefaultAccessTokenRequest(Map.of("scope", new String[]{"x"}, "client_id", new String[]{"x"}));
-        assertNotEquals(accessTokenRequest, newAccessTokenRequest);
-        assertNotEquals(accessTokenRequest.toString(), newAccessTokenRequest.toString());
-        assertNotEquals(accessTokenRequest.hashCode(), newAccessTokenRequest.hashCode());
+        assertThat(newAccessTokenRequest).isNotEqualTo(accessTokenRequest);
+        assertThat(newAccessTokenRequest.toString()).isNotEqualTo(accessTokenRequest.toString());
+        assertThat(newAccessTokenRequest.hashCode()).isNotEqualTo(accessTokenRequest.hashCode());
         for (Map.Entry<String, List<String>> entry : accessTokenRequest.entrySet()) {
-            assertNotNull(entry.getKey());
+            assertThat(entry.getKey()).isNotNull();
         }
         accessTokenRequest.remove("key");
-        assertNull(accessTokenRequest.get("key"));
-        assertFalse(accessTokenRequest.containsKey("key"));
-        assertFalse(accessTokenRequest.containsValue("value"));
+        assertThat(accessTokenRequest).doesNotContainKey("key")
+                .doesNotContainKey("key");
+        assertThat(accessTokenRequest.containsValue("value")).isFalse();
     }
 
-    @Test(expected = NullPointerException.class)
-    public void testAuthorizationCodeAccessTokenProvider() {
+    @Test
+    void authorizationCodeAccessTokenProvider() {
         ClientHttpRequestFactory clientHttpRequestFactory = mock(ClientHttpRequestFactory.class);
         AccessTokenRequest request = mock(AccessTokenRequest.class);
         AuthorizationCodeResourceDetails authorizationCodeResourceDetails = new AuthorizationCodeResourceDetails();
@@ -158,6 +159,7 @@ public class UaaTokenTests {
         when(request.getHeaders()).thenReturn(new HashMap<>(Map.of(OAuth2Utils.USER_OAUTH_APPROVAL, List.of("true"))));
         when(request.containsKey(OAuth2Utils.USER_OAUTH_APPROVAL)).thenReturn(true);
         authorizationCodeAccessTokenProvider.setRequestFactory(clientHttpRequestFactory);
-        authorizationCodeAccessTokenProvider.obtainAuthorizationCode(authorizationCodeResourceDetails, request);
+        assertThatExceptionOfType(NullPointerException.class).isThrownBy(() ->
+                authorizationCodeAccessTokenProvider.obtainAuthorizationCode(authorizationCodeResourceDetails, request));
     }
 }
