@@ -25,6 +25,8 @@ import org.cloudfoundry.identity.uaa.constants.OriginKeys;
 import org.cloudfoundry.identity.uaa.oauth.approval.InMemoryApprovalStore;
 import org.cloudfoundry.identity.uaa.oauth.client.ClientConstants;
 import org.cloudfoundry.identity.uaa.oauth.common.OAuth2AccessToken;
+import org.cloudfoundry.identity.uaa.oauth.common.exceptions.InvalidScopeException;
+import org.cloudfoundry.identity.uaa.oauth.common.exceptions.InvalidTokenException;
 import org.cloudfoundry.identity.uaa.oauth.openid.IdTokenCreator;
 import org.cloudfoundry.identity.uaa.oauth.openid.IdTokenGranter;
 import org.cloudfoundry.identity.uaa.oauth.provider.AuthorizationRequest;
@@ -48,41 +50,35 @@ import org.cloudfoundry.identity.uaa.zone.InMemoryMultitenantClientServices;
 import org.cloudfoundry.identity.uaa.zone.MultitenancyFixture;
 import org.cloudfoundry.identity.uaa.zone.TokenPolicy;
 import org.cloudfoundry.identity.uaa.zone.beans.IdentityZoneManager;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.stubbing.Answer;
 import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import org.cloudfoundry.identity.uaa.oauth.common.exceptions.InvalidScopeException;
-import org.cloudfoundry.identity.uaa.oauth.common.exceptions.InvalidTokenException;
 import org.springframework.test.util.ReflectionTestUtils;
 import org.springframework.web.HttpRequestMethodNotSupportedException;
 
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.stream.Stream;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatNoException;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatExceptionOfType;
 import static org.cloudfoundry.identity.uaa.oauth.token.TokenConstants.TokenFormat.OPAQUE;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.params.provider.Arguments.arguments;
 import static org.mockito.AdditionalMatchers.not;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
@@ -92,21 +88,19 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.reset;
 import static org.mockito.Mockito.when;
 
-@RunWith(Parameterized.class)
-public class CheckTokenEndpointTests {
+class CheckTokenEndpointTests {
     private IdentityZone defaultZone;
     private CheckTokenEndpoint endpoint;
     private OAuth2Authentication authentication;
     private UaaTokenServices tokenServices;
     private InMemoryMultitenantClientServices clientDetailsService;
-    private ApprovalStore approvalStore = new InMemoryApprovalStore();
+    private final ApprovalStore approvalStore = new InMemoryApprovalStore();
 
-    private String userId = "12345";
-    private String userName = "olds";
-    private String userEmail = "olds@vmware.com";
+    private final String userId = "12345";
+    private final String userName = "olds";
+    private final String userEmail = "olds@vmware.com";
 
     private String signerKey;
-    private boolean useOpaque;
 
     private AuthorizationRequest authorizationRequest;
     private UaaUserPrototype uaaUserPrototype;
@@ -114,14 +108,11 @@ public class CheckTokenEndpointTests {
     private UaaClientDetails defaultClient;
     private Map<String, UaaClientDetails> clientDetailsStore;
     private List<GrantedAuthority> userAuthorities;
-    private IdentityZoneProvisioning zoneProvisioning = mock(IdentityZoneProvisioning.class);
+    private final IdentityZoneProvisioning zoneProvisioning = mock(IdentityZoneProvisioning.class);
     private RevocableTokenProvisioning tokenProvisioning;
     private HashMap<String, RevocableToken> tokenMap;
 
-    @Rule
-    public ExpectedException exception = ExpectedException.none();
-
-    private MockHttpServletRequest request = new MockHttpServletRequest();
+    private final MockHttpServletRequest request = new MockHttpServletRequest();
 
     IdentityZone zone;
     private UaaUserDatabase userDatabase;
@@ -131,11 +122,9 @@ public class CheckTokenEndpointTests {
     private TimeService timeService;
     private IdentityZoneManager mockIdentityZoneManager;
 
-    @Parameterized.Parameters
-    public static Collection<Object[]> data() {
-        return Arrays.asList(new Object[][]{
-                {
-                        """
+    public static Stream<Arguments> data() {
+        return Stream.of(
+                arguments("""
                         -----BEGIN RSA PRIVATE KEY-----
                         MIIEowIBAAKCAQEA0m59l2u9iDnMbrXHfqkOrn2dVQ3vfBJqcDuFUK03d+1PZGbV
                         lNCqnkpIJ8syFppW8ljnWweP7+LiWpRoz0I7fYb3d8TjhV86Y997Fl4DBrxgM6KT
@@ -163,15 +152,12 @@ public class CheckTokenEndpointTests {
                         QH+xY/4h8tgL+eASz5QWhj8DItm8wYGI5lKJr8f36jk0JLPUXODyDAeN6ekXY9LI
                         fudkijw0dnh28LJqbkFF5wLNtATzyCfzjp+czrPMn9uqLNKt/iVD
                         -----END RSA PRIVATE KEY-----
-                        """, false
-                },
-                {
-                        "signing_key_does_not_affect_opaque_token", true
-                },
-        });
+                        """, false),
+                arguments("signing_key_does_not_affect_opaque_token", true)
+        );
     }
 
-    private String alternateSignerKey = """
+    private final String alternateSignerKey = """
             -----BEGIN RSA PRIVATE KEY-----
             MIIEowIBAAKCAQEAsLZaEu+98J6neClnaCBy82xg9/DdVgLuO4fr0X9N/nmzaJ1L
             vBmhBdRA8zCLMHQXQmNko7vAZa2/L+A1zQL110puyB4YeInE5lJmGuAADVE2s2ep
@@ -201,22 +187,17 @@ public class CheckTokenEndpointTests {
             -----END RSA PRIVATE KEY-----
             """;
 
-    public CheckTokenEndpointTests(String signerKey, boolean useOpaque) {
+    void initCheckTokenEndpointTests(String signerKey, boolean useOpaque) {
         this.signerKey = signerKey;
-        this.useOpaque = useOpaque;
-    }
-
-    @Before
-    public void setUp() throws Exception {
         setUp(useOpaque);
     }
 
-    @After
-    public void after() {
+    @AfterEach
+    void after() {
         TestUtils.resetIdentityZoneHolder(null);
     }
 
-    public void setUp(boolean opaque) throws Exception {
+    void setUp(boolean opaque) {
         zone = MultitenancyFixture.identityZone("id", "subdomain");
         defaultZone = IdentityZone.getUaa();
 
@@ -253,8 +234,8 @@ public class CheckTokenEndpointTests {
                 "salt",
                 new Date(nowMillis - 2000));
         uaaUserPrototype = new UaaUserPrototype(user).withAuthorities(null);
-        authorizationRequest = new AuthorizationRequest("client", Collections.singleton("read"));
-        authorizationRequest.setResourceIds(new HashSet<>(Arrays.asList("client", "scim")));
+        authorizationRequest = new AuthorizationRequest("client", Set.of("read"));
+        authorizationRequest.setResourceIds(new HashSet<>(List.of("client", "scim")));
         Map<String, String> requestParameters = new HashMap<>();
         tokenProvisioning = mock(RevocableTokenProvisioning.class);
         if (opaque) {
@@ -279,14 +260,13 @@ public class CheckTokenEndpointTests {
                 return null;
             }).when(tokenProvisioning).createIfNotExists(any(), anyString());
 
-
             requestParameters.put(TokenConstants.REQUEST_TOKEN_FORMAT, OPAQUE.getStringValue());
         }
         authorizationRequest.setRequestParameters(requestParameters);
         authentication = new OAuth2Authentication(authorizationRequest.createOAuth2Request(),
                 UaaAuthenticationTestFactory.getAuthentication(userId, userName, "olds@vmware.com"));
 
-        configureDefaultZoneKeys(Collections.singletonMap("testKey", signerKey));
+        configureDefaultZoneKeys(Map.of("testKey", signerKey));
         IdentityZoneHolder.set(defaultZone);
         when(zoneProvisioning.retrieve(IdentityZone.getUaaZoneId())).thenReturn(defaultZone);
         Date oneSecondAgo = new Date(nowMillis - 1000);
@@ -309,14 +289,13 @@ public class CheckTokenEndpointTests {
 
         defaultClient = new UaaClientDetails("client", "scim, cc", "read, write", "authorization_code, password", "scim.read, scim.write, cat.pet", "http://localhost:8080/uaa");
         clientDetailsStore =
-                Collections.singletonMap(
+                Map.of(
                         "client",
                         defaultClient
                 );
         clientDetailsService.setClientDetailsStore(zone.getId(), clientDetailsStore);
         clientDetailsService.setClientDetailsStore(IdentityZoneHolder.get().getId(), clientDetailsStore);
-
-        tokenEndpointBuilder = new TokenEndpointBuilder("http://localhost:8080/uaa");
+        assertThatNoException().isThrownBy(() -> tokenEndpointBuilder = new TokenEndpointBuilder("http://localhost:8080/uaa"));
         userDatabase = mock(UaaUserDatabase.class);
         KeyInfoService keyInfoService = new KeyInfoService("http://localhost:8080/uaa");
         tokenValidationService = new TokenValidationService(tokenProvisioning, tokenEndpointBuilder, userDatabase, clientDetailsService, keyInfoService);
@@ -355,45 +334,48 @@ public class CheckTokenEndpointTests {
 
     private void resetAndMockUserDatabase(String userId, UaaUser user) {
         reset(userDatabase);
-        when(userDatabase.retrieveUserById(eq(userId))).thenReturn(user);
+        when(userDatabase.retrieveUserById(userId)).thenReturn(user);
         when(userDatabase.retrieveUserById(not(eq(userId)))).thenThrow(new UsernameNotFoundException("mock"));
-        when(userDatabase.retrieveUserPrototypeById(eq(userId))).thenReturn(uaaUserPrototype);
+        when(userDatabase.retrieveUserPrototypeById(userId)).thenReturn(uaaUserPrototype);
         when(userDatabase.retrieveUserPrototypeById(not(eq(userId)))).thenThrow(new UsernameNotFoundException("mock"));
     }
 
-    @Test
-    public void testClientWildcard() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void clientWildcard(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         UaaClientDetails client =
                 new UaaClientDetails("client", "zones", "zones.*.admin", "authorization_code, password",
                         "scim.read, scim.write", "http://localhost:8080/uaa");
-        client.setAutoApproveScopes(Collections.singletonList("zones.*.admin"));
-        Map<String, UaaClientDetails> clientDetailsStore = Collections.singletonMap("client", client);
+        client.setAutoApproveScopes(List.of("zones.*.admin"));
+        Map<String, UaaClientDetails> aClientDetailsStore = Map.of("client", client);
 
-        clientDetailsService.setClientDetailsStore(IdentityZoneHolder.get().getId(), clientDetailsStore);
+        clientDetailsService.setClientDetailsStore(IdentityZoneHolder.get().getId(), aClientDetailsStore);
         tokenServices.setClientDetailsService(clientDetailsService);
 
-        authorizationRequest = new AuthorizationRequest("client", Collections.singleton("zones.myzone.admin"));
-        authorizationRequest.setResourceIds(new HashSet<>(Arrays.asList("client", "zones")));
+        authorizationRequest = new AuthorizationRequest("client", Set.of("zones.myzone.admin"));
+        authorizationRequest.setResourceIds(new HashSet<>(List.of("client", "zones")));
         authentication = new OAuth2Authentication(authorizationRequest.createOAuth2Request(),
                 UaaAuthenticationTestFactory.getAuthentication(userId, userName, "olds@vmware.com"));
 
-        endpoint.checkToken(tokenServices.createAccessToken(authentication).getValue(), Collections.emptyList(), request);
+        endpoint.checkToken(tokenServices.createAccessToken(authentication).getValue(), List.of(), request);
     }
 
-    @Test()
-    public void testRejectInvalidVerifier() throws Exception {
-        try {
-            OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-            configureDefaultZoneKeys(Collections.singletonMap("testKey", alternateSignerKey));
-            endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+    @MethodSource("data")
+    @ParameterizedTest
+    void rejectInvalidVerifier(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
+        OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
+        configureDefaultZoneKeys(Map.of("testKey", alternateSignerKey));
 
-            fail("Token validation should fail");
-        } catch (InvalidTokenException ignored) {
-        }
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                endpoint.checkToken(accessToken.getValue(), List.of(), request));
     }
 
-    @Test(expected = TokenRevokedException.class)
-    public void testRejectUserSaltChange() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void rejectUserSaltChange(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
         user = new UaaUser(
                 userId,
@@ -412,11 +394,14 @@ public class CheckTokenEndpointTests {
                 "changedsalt",
                 new Date(nowMillis - 2000));
         resetAndMockUserDatabase(userId, user);
-        endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        assertThatExceptionOfType(TokenRevokedException.class).isThrownBy(() ->
+                endpoint.checkToken(accessToken.getValue(), List.of(), request));
     }
 
-    @Test(expected = TokenRevokedException.class)
-    public void testRejectUserUsernameChange() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void rejectUserUsernameChange(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
         user = new UaaUser(
                 userId,
@@ -435,11 +420,14 @@ public class CheckTokenEndpointTests {
                 "salt",
                 new Date(nowMillis - 2000));
         resetAndMockUserDatabase(userId, user);
-        endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        assertThatExceptionOfType(TokenRevokedException.class).isThrownBy(() ->
+                endpoint.checkToken(accessToken.getValue(), List.of(), request));
     }
 
-    @Test(expected = TokenRevokedException.class)
-    public void testRejectUserEmailChange() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void rejectUserEmailChange(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
         user = new UaaUser(
                 userId,
@@ -458,12 +446,14 @@ public class CheckTokenEndpointTests {
                 "salt",
                 new Date(nowMillis - 2000));
         resetAndMockUserDatabase(userId, user);
-        endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        assertThatExceptionOfType(TokenRevokedException.class).isThrownBy(() ->
+                endpoint.checkToken(accessToken.getValue(), List.of(), request));
     }
 
-
-    @Test(expected = TokenRevokedException.class)
-    public void testRejectUserPasswordChange() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void rejectUserPasswordChange(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
         user = new UaaUser(
                 userId,
@@ -481,139 +471,163 @@ public class CheckTokenEndpointTests {
                 IdentityZoneHolder.get().getId(),
                 "salt",
                 new Date(nowMillis - 2000));
-
         resetAndMockUserDatabase(userId, user);
-        endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        assertThatExceptionOfType(TokenRevokedException.class).isThrownBy(() ->
+                endpoint.checkToken(accessToken.getValue(), List.of(), request));
     }
 
-    @Test(expected = TokenRevokedException.class)
-    public void testRejectClientSaltChange() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void rejectClientSaltChange(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
         defaultClient.addAdditionalInformation(ClientConstants.TOKEN_SALT, "changedsalt");
-        endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        assertThatExceptionOfType(TokenRevokedException.class).isThrownBy(() ->
+                endpoint.checkToken(accessToken.getValue(), List.of(), request));
     }
 
-    @Test(expected = TokenRevokedException.class)
-    public void testRejectClientPasswordChange() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void rejectClientPasswordChange(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
         defaultClient.setClientSecret("changedsecret");
-        endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        assertThatExceptionOfType(TokenRevokedException.class).isThrownBy(() ->
+                endpoint.checkToken(accessToken.getValue(), List.of(), request));
     }
 
     private static String missingScopeMessage(String... scopes) {
         return "Some requested scopes are missing: " + String.join(",", scopes);
     }
 
-    @Test(expected = InvalidScopeException.class)
-    public void testValidateScopesNotPresent() throws Exception {
-        try {
-            authentication = new OAuth2Authentication(new AuthorizationRequest("client",
-                    Collections.singleton("scim.read")).createOAuth2Request(), null);
-            OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-
-            endpoint.checkToken(accessToken.getValue(), Collections.singletonList("scim.write"), request);
-        } catch (InvalidScopeException ex) {
-            assertEquals(missingScopeMessage("scim.write"), ex.getMessage());
-            throw ex;
-        }
-    }
-
-    @Test(expected = InvalidScopeException.class)
-    public void testValidateScopesMultipleNotPresent() throws Exception {
-        try {
-            authentication = new OAuth2Authentication(new AuthorizationRequest("client",
-                    Collections.singletonList("cat.pet")).createOAuth2Request(), null);
-            OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-
-            endpoint.checkToken(accessToken.getValue(), Arrays.asList("scim.write", "scim.read"), request);
-        } catch (InvalidScopeException ex) {
-            assertEquals(missingScopeMessage("scim.write", "scim.read"), ex.getMessage());
-            throw ex;
-        }
-    }
-
-    @Test
-    public void testValidateScopeSinglePresent() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void validateScopesNotPresent(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         authentication = new OAuth2Authentication(new AuthorizationRequest("client",
-                Collections.singleton("scim.read")).createOAuth2Request(), null);
+                Set.of("scim.read")).createOAuth2Request(), null);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
 
-        endpoint.checkToken(accessToken.getValue(), Collections.singletonList("scim.read"), request);
+        List<String> scopes = List.of("scim.write");
+        String accessTokenValue = accessToken.getValue();
+        assertThatThrownBy(() -> endpoint.checkToken(accessTokenValue, scopes, request))
+                .isInstanceOf(InvalidScopeException.class)
+                .hasMessage(missingScopeMessage("scim.write"));
     }
 
-    @Test
-    public void testValidateScopesMultiplePresent() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void validateScopesMultipleNotPresent(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         authentication = new OAuth2Authentication(new AuthorizationRequest("client",
-                Arrays.asList("scim.read", "scim.write")).createOAuth2Request(), null);
+                List.of("cat.pet")).createOAuth2Request(), null);
+        OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
+        List<String> scopes = List.of("scim.write", "scim.read");
+        String accessTokenValue = accessToken.getValue();
+        assertThatThrownBy(() -> endpoint.checkToken(accessTokenValue, scopes, request))
+                .isInstanceOf(InvalidScopeException.class)
+                .hasMessage(missingScopeMessage("scim.write", "scim.read"));
+    }
+
+    @MethodSource("data")
+    @ParameterizedTest
+    void validateScopeSinglePresent(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
+        authentication = new OAuth2Authentication(new AuthorizationRequest("client",
+                Set.of("scim.read")).createOAuth2Request(), null);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
 
-        endpoint.checkToken(accessToken.getValue(), Arrays.asList("scim.write", "scim.read"), request);
+        endpoint.checkToken(accessToken.getValue(), List.of("scim.read"), request);
     }
 
-    @Test(expected = InvalidScopeException.class)
-    public void testValidateScopesSomeNotPresent() throws Exception {
-        try {
-            authentication = new OAuth2Authentication(new AuthorizationRequest("client",
-                    Arrays.asList("scim.read", "scim.write")).createOAuth2Request(), null);
-            OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
+    @MethodSource("data")
+    @ParameterizedTest
+    void validateScopesMultiplePresent(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
+        authentication = new OAuth2Authentication(new AuthorizationRequest("client",
+                List.of("scim.read", "scim.write")).createOAuth2Request(), null);
+        OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
 
-            endpoint.checkToken(accessToken.getValue(), Arrays.asList("scim.read", "ponies.ride"), request);
-        } catch (InvalidScopeException ex) {
-            assertEquals(missingScopeMessage("ponies.ride"), ex.getMessage());
-            throw ex;
-        }
+        endpoint.checkToken(accessToken.getValue(), List.of("scim.write", "scim.read"), request);
     }
 
-    @Test(expected = InvalidTokenException.class)
-    public void revokingScopesFromUser_invalidatesToken() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void validateScopesSomeNotPresent(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
+        authentication = new OAuth2Authentication(new AuthorizationRequest("client",
+                List.of("scim.read", "scim.write")).createOAuth2Request(), null);
+        OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
+        List<String> scopes = List.of("scim.read", "ponies.ride");
+        String accessTokenValue = accessToken.getValue();
+        assertThatThrownBy(() -> endpoint.checkToken(accessTokenValue, scopes, request))
+                .isInstanceOf(InvalidScopeException.class)
+                .hasMessage(missingScopeMessage("ponies.ride"));
+    }
+
+    @MethodSource("data")
+    @ParameterizedTest
+    void revokingScopesFromUser_invalidatesToken(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
         user = user.authorities(UaaAuthority.NONE_AUTHORITIES);
         resetAndMockUserDatabase(userId, user);
-
-        endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                endpoint.checkToken(accessToken.getValue(), List.of(), request));
     }
 
-    @Test(expected = InvalidTokenException.class)
-    public void revokingScopesFromClient_invalidatesToken() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void revokingScopesFromClient_invalidatesToken(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
         defaultClient = new UaaClientDetails("client", "scim, cc", "write", "authorization_code, password", "scim.read, scim.write", "http://localhost:8080/uaa");
-        clientDetailsStore = Collections.singletonMap("client", defaultClient);
+        clientDetailsStore = Map.of("client", defaultClient);
         clientDetailsService.setClientDetailsStore(IdentityZoneHolder.get().getId(), clientDetailsStore);
-
-        endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                endpoint.checkToken(accessToken.getValue(), List.of(), request));
     }
 
-    @Test(expected = InvalidTokenException.class)
-    public void revokingAuthoritiesFromClients_invalidatesToken() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void revokingAuthoritiesFromClients_invalidatesToken(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         defaultClient = new UaaClientDetails("client", "scim, cc", "write,read", "authorization_code, password", "scim.write", "http://localhost:8080/uaa");
-        clientDetailsStore = Collections.singletonMap(
+        clientDetailsStore = Map.of(
                 "client",
                 defaultClient
         );
         clientDetailsService.setClientDetailsStore(IdentityZoneHolder.get().getId(), clientDetailsStore);
         resetAndMockUserDatabase(userId, user);
         authentication = new OAuth2Authentication(new AuthorizationRequest("client",
-                Collections.singleton("scim.read")).createOAuth2Request(), null);
+                Set.of("scim.read")).createOAuth2Request(), null);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                endpoint.checkToken(accessToken.getValue(), List.of(), request));
     }
 
-    @Test
-    public void testSwitchVerifierKey() throws Exception {
-        try {
-            OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-            configureDefaultZoneKeys(Collections.singletonMap("testKey", alternateSignerKey));
-            OAuth2AccessToken alternateToken = tokenServices.createAccessToken(authentication);
-            endpoint.checkToken(alternateToken.getValue(), Collections.emptyList(), request);
-            endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-            fail("Token validation should fail");
-        } catch (InvalidTokenException ex) {
-            assertTrue("expected - rewrite to use a rule", true);
-        }
+    @MethodSource("data")
+    @ParameterizedTest
+    void switchVerifierKey(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
+        OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
+        configureDefaultZoneKeys(Map.of("testKey", alternateSignerKey));
+        OAuth2AccessToken alternateToken = tokenServices.createAccessToken(authentication);
+        List<String> scopes = List.of();
+
+        String alternateTokenValue = alternateToken.getValue();
+        assertThatThrownBy(() -> endpoint.checkToken(alternateTokenValue, scopes, request))
+                .isInstanceOf(InvalidTokenException.class);
+
+        String accessTokenValue = accessToken.getValue();
+        assertThatThrownBy(() -> endpoint.checkToken(accessTokenValue, scopes, request))
+                .isInstanceOf(InvalidTokenException.class);
     }
 
-    @Test
-    public void testClientAddSecret() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void clientAddSecret(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         String firstClientSecret = "oldsecret";
         String secondClientSecret = "newsecret";
         defaultClient.setClientSecret(firstClientSecret);
@@ -621,137 +635,155 @@ public class CheckTokenEndpointTests {
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
 
         defaultClient.setClientSecret(firstClientSecret + " " + secondClientSecret);
-        endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        endpoint.checkToken(accessToken.getValue(), List.of(), request);
         when(timeService.getCurrentTimeMillis()).thenCallRealMethod().thenReturn(1000L);
         accessToken = tokenServices.createAccessToken(authentication);
-        endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        endpoint.checkToken(accessToken.getValue(), List.of(), request);
     }
 
-    @Test
-    public void testClientDeleteSecret() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void clientDeleteSecret(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         String firstClientSecret = "oldsecret";
         String secondClientSecret = "newsecret";
 
         defaultClient.setClientSecret(firstClientSecret + " " + secondClientSecret);
         when(timeService.getCurrentTimeMillis()).thenCallRealMethod().thenReturn(1000L);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        endpoint.checkToken(accessToken.getValue(), List.of(), request);
 
         defaultClient.setClientSecret(secondClientSecret);
         when(timeService.getCurrentTimeMillis()).thenCallRealMethod().thenReturn(1000L);
         accessToken = tokenServices.createAccessToken(authentication);
-        endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        endpoint.checkToken(accessToken.getValue(), List.of(), request);
     }
 
-    @Test
-    public void testUserIdInResult() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void userIdInResult(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-        assertEquals("olds", result.getUserName());
-        assertEquals("12345", result.getUserId());
-        assertNull("external attributes must not present", result.getExtAttr());
+        Claims result = endpoint.checkToken(accessToken.getValue(), List.of(), request);
+        assertThat(result.getUserName()).isEqualTo("olds");
+        assertThat(result.getUserId()).isEqualTo("12345");
+        assertThat(result.getExtAttr()).as("external attributes must not present").isNull();
     }
 
-    @Test
-    public void testExtAttrInResult() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void extAttrInResult(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         tokenServices.setUaaTokenEnhancer(new TestTokenEnhancer());
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-        assertNotNull("external attributes not present", result.getExtAttr());
-        assertEquals("test", result.getExtAttr().get("purpose"));
+        Claims result = endpoint.checkToken(accessToken.getValue(), List.of(), request);
+        assertThat(result.getExtAttr()).as("external attributes not present").isNotNull()
+                .containsEntry("purpose", "test");
     }
 
-    @Test
-    public void testIssuerInResults() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void issuerInResults(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         ReflectionTestUtils.setField(tokenEndpointBuilder, "issuer", "http://some.other.issuer");
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        Claims claims = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-        assertNotNull("iss field is not present", claims.getIss());
-        assertEquals("http://some.other.issuer/oauth/token", claims.getIss());
+        Claims claims = endpoint.checkToken(accessToken.getValue(), List.of(), request);
+        assertThat(claims.getIss()).as("iss field is not present").isNotNull()
+                .isEqualTo("http://some.other.issuer/oauth/token");
     }
 
-    @Test
-    public void testIssuerInResultsInNonDefaultZone() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void issuerInResultsInNonDefaultZone(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         try {
             IdentityZoneHolder.set(zone);
             ReflectionTestUtils.setField(tokenEndpointBuilder, "issuer", "http://some.other.issuer");
             OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-            Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-            assertNotNull("iss field is not present", result.getIss());
-            assertEquals("http://subdomain.some.other.issuer/oauth/token", result.getIss());
+            Claims result = endpoint.checkToken(accessToken.getValue(), List.of(), request);
+            assertThat(result.getIss()).as("iss field is not present").isNotNull()
+                    .isEqualTo("http://subdomain.some.other.issuer/oauth/token");
         } finally {
             IdentityZoneHolder.clear();
         }
     }
 
-    @Test(expected = InvalidTokenException.class)
-    public void testZoneRejectsTokenSignedWithKeyFromOtherZone() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void zoneRejectsTokenSignedWithKeyFromOtherZone(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() -> {
 
-        try {
-            zone.getConfig().getTokenPolicy().setKeys(Collections.singletonMap("testKey",
-                    """
-                    -----BEGIN RSA PRIVATE KEY-----
-                    MIIBOgIBAAJAcEJMJ3ZT4GgdxipJe4uXvRQFfSpOneGjHfFTLjECMd0OkNtIWoIU
-                    8OisQRmhBDdXk2owne2SGJcqsVN/pd9pMQIDAQABAkAV/KY1xHNBLKNIQNgLnpel
-                    rNo2XabwPVVZc/66uVaYtVSwQjOxlo7mIzp77dpiM6o0kT4v3/9eyfKZte4uB/pR
-                    AiEAtF6MXrNeqEoJVCQ6LOUFgc1HtS1tqHBk6Fo3WO44ctMCIQCfVI3bTCY09F82
-                    TgIHtKdBtKzCGS56EzqbnbNodAoJawIhAJ25dCw31BV7sI6oo0qw9tDcDtGrKRI7
-                    PrJEedPFdQ1LAiEAklI6fHywUc1iayK0ppL3T1Y3mYE6t41VM3hePLzkQsUCIFjE
-                    NEUwGQmhVae7YpA8dgs0wFjsfdX15q+4wwWKu9oN
-                    -----END RSA PRIVATE KEY-----"""));
-            IdentityZoneHolder.set(zone);
-            KeyInfoService keyInfoService = new KeyInfoService("http://localhost:8080/uaa");
-            ApprovalService approvalService = new ApprovalService(timeService, approvalStore);
-            tokenServices = new UaaTokenServices(
-                    mock(IdTokenCreator.class),
-                    tokenEndpointBuilder,
-                    clientDetailsService,
-                    tokenProvisioning,
-                    tokenValidationService,
-                    null,
-                    timeService,
-                    new TokenValidityResolver(new ClientAccessTokenValidity(clientDetailsService, mockIdentityZoneManager), Integer.MAX_VALUE, timeService),
-                    userDatabase,
-                    Sets.newHashSet(),
-                    zone.getConfig().getTokenPolicy(),
-                    keyInfoService,
-                    new IdTokenGranter(approvalService),
-                    approvalService);
-            endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-        } finally {
-            IdentityZoneHolder.clear();
-        }
-
+            try {
+                zone.getConfig().getTokenPolicy().setKeys(Map.of("testKey",
+                        """
+                                -----BEGIN RSA PRIVATE KEY-----
+                                MIIBOgIBAAJAcEJMJ3ZT4GgdxipJe4uXvRQFfSpOneGjHfFTLjECMd0OkNtIWoIU
+                                8OisQRmhBDdXk2owne2SGJcqsVN/pd9pMQIDAQABAkAV/KY1xHNBLKNIQNgLnpel
+                                rNo2XabwPVVZc/66uVaYtVSwQjOxlo7mIzp77dpiM6o0kT4v3/9eyfKZte4uB/pR
+                                AiEAtF6MXrNeqEoJVCQ6LOUFgc1HtS1tqHBk6Fo3WO44ctMCIQCfVI3bTCY09F82
+                                TgIHtKdBtKzCGS56EzqbnbNodAoJawIhAJ25dCw31BV7sI6oo0qw9tDcDtGrKRI7
+                                PrJEedPFdQ1LAiEAklI6fHywUc1iayK0ppL3T1Y3mYE6t41VM3hePLzkQsUCIFjE
+                                NEUwGQmhVae7YpA8dgs0wFjsfdX15q+4wwWKu9oN
+                                -----END RSA PRIVATE KEY-----"""));
+                IdentityZoneHolder.set(zone);
+                KeyInfoService keyInfoService = new KeyInfoService("http://localhost:8080/uaa");
+                ApprovalService approvalService = new ApprovalService(timeService, approvalStore);
+                tokenServices = new UaaTokenServices(
+                        mock(IdTokenCreator.class),
+                        tokenEndpointBuilder,
+                        clientDetailsService,
+                        tokenProvisioning,
+                        tokenValidationService,
+                        null,
+                        timeService,
+                        new TokenValidityResolver(new ClientAccessTokenValidity(clientDetailsService, mockIdentityZoneManager), Integer.MAX_VALUE, timeService),
+                        userDatabase,
+                        Sets.newHashSet(),
+                        zone.getConfig().getTokenPolicy(),
+                        keyInfoService,
+                        new IdTokenGranter(approvalService),
+                        approvalService);
+                endpoint.checkToken(accessToken.getValue(), List.of(), request);
+            } finally {
+                IdentityZoneHolder.clear();
+            }
+        });
     }
 
-    @Test
-    public void testZoneValidatesTokenSignedWithOwnKey() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void zoneValidatesTokenSignedWithOwnKey(String signerKey, boolean useOpaque) throws Exception {
+
+        initCheckTokenEndpointTests(signerKey, useOpaque);
 
         try {
-            zone.getConfig().getTokenPolicy().setKeys(Collections.singletonMap("zoneKey",
+            zone.getConfig().getTokenPolicy().setKeys(Map.of("zoneKey",
                     """
-                    -----BEGIN RSA PRIVATE KEY-----
-                    MIIBOgIBAAJAcEJMJ3ZT4GgdxipJe4uXvRQFfSpOneGjHfFTLjECMd0OkNtIWoIU
-                    8OisQRmhBDdXk2owne2SGJcqsVN/pd9pMQIDAQABAkAV/KY1xHNBLKNIQNgLnpel
-                    rNo2XabwPVVZc/66uVaYtVSwQjOxlo7mIzp77dpiM6o0kT4v3/9eyfKZte4uB/pR
-                    AiEAtF6MXrNeqEoJVCQ6LOUFgc1HtS1tqHBk6Fo3WO44ctMCIQCfVI3bTCY09F82
-                    TgIHtKdBtKzCGS56EzqbnbNodAoJawIhAJ25dCw31BV7sI6oo0qw9tDcDtGrKRI7
-                    PrJEedPFdQ1LAiEAklI6fHywUc1iayK0ppL3T1Y3mYE6t41VM3hePLzkQsUCIFjE
-                    NEUwGQmhVae7YpA8dgs0wFjsfdX15q+4wwWKu9oN
-                    -----END RSA PRIVATE KEY-----"""));
+                            -----BEGIN RSA PRIVATE KEY-----
+                            MIIBOgIBAAJAcEJMJ3ZT4GgdxipJe4uXvRQFfSpOneGjHfFTLjECMd0OkNtIWoIU
+                            8OisQRmhBDdXk2owne2SGJcqsVN/pd9pMQIDAQABAkAV/KY1xHNBLKNIQNgLnpel
+                            rNo2XabwPVVZc/66uVaYtVSwQjOxlo7mIzp77dpiM6o0kT4v3/9eyfKZte4uB/pR
+                            AiEAtF6MXrNeqEoJVCQ6LOUFgc1HtS1tqHBk6Fo3WO44ctMCIQCfVI3bTCY09F82
+                            TgIHtKdBtKzCGS56EzqbnbNodAoJawIhAJ25dCw31BV7sI6oo0qw9tDcDtGrKRI7
+                            PrJEedPFdQ1LAiEAklI6fHywUc1iayK0ppL3T1Y3mYE6t41VM3hePLzkQsUCIFjE
+                            NEUwGQmhVae7YpA8dgs0wFjsfdX15q+4wwWKu9oN
+                            -----END RSA PRIVATE KEY-----"""));
             IdentityZoneHolder.set(zone);
             tokenEndpointBuilder = new TokenEndpointBuilder("http://some.other.issuer");
             OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-            endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+            endpoint.checkToken(accessToken.getValue(), List.of(), request);
         } finally {
             IdentityZoneHolder.clear();
         }
 
     }
 
-    @Test
-    public void testZoneValidatesTokenSignedWithInactiveKey() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void zoneValidatesTokenSignedWithInactiveKey(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         HashMap<String, String> keys = new HashMap<>();
         keys.put("oldKey", """
                 -----BEGIN RSA PRIVATE KEY-----
@@ -771,44 +803,15 @@ public class CheckTokenEndpointTests {
         configureDefaultZoneKeys(keys);
         IdentityZoneHolder.get().getConfig().getTokenPolicy().setActiveKeyId("newKey");
 
-        endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        endpoint.checkToken(accessToken.getValue(), List.of(), request);
     }
 
-    @Test
-    public void testZoneValidatesTokenSignedWithRemovedKey() throws Exception {
-        try {
-            HashMap<String, String> keys = new HashMap<>();
-            keys.put("oldKey", """
-                    -----BEGIN RSA PRIVATE KEY-----
-                    MIIBOgIBAAJAcEJMJ3ZT4GgdxipJe4uXvRQFfSpOneGjHfFTLjECMd0OkNtIWoIU
-                    8OisQRmhBDdXk2owne2SGJcqsVN/pd9pMQIDAQABAkAV/KY1xHNBLKNIQNgLnpel
-                    rNo2XabwPVVZc/66uVaYtVSwQjOxlo7mIzp77dpiM6o0kT4v3/9eyfKZte4uB/pR
-                    AiEAtF6MXrNeqEoJVCQ6LOUFgc1HtS1tqHBk6Fo3WO44ctMCIQCfVI3bTCY09F82
-                    TgIHtKdBtKzCGS56EzqbnbNodAoJawIhAJ25dCw31BV7sI6oo0qw9tDcDtGrKRI7
-                    PrJEedPFdQ1LAiEAklI6fHywUc1iayK0ppL3T1Y3mYE6t41VM3hePLzkQsUCIFjE
-                    NEUwGQmhVae7YpA8dgs0wFjsfdX15q+4wwWKu9oN
-                    -----END RSA PRIVATE KEY-----""");
-            configureDefaultZoneKeys(keys);
-            tokenEndpointBuilder = new TokenEndpointBuilder("http://some.other.issuer");
-            OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-
-            keys.remove("oldKey");
-            keys.put("newKey", "nc978y78o3cg5i7env587geehn89mcehgc46");
-            configureDefaultZoneKeys(keys);
-            IdentityZoneHolder.get().getConfig().getTokenPolicy().setActiveKeyId("newKey");
-
-            endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-
-            fail("Token validation should fail");
-        } catch (InvalidTokenException ex) {
-            assertTrue("expected - rewrite to use a rule", true);
-        }
-    }
-
-    @Test(expected = InvalidTokenException.class)
-    public void testDefaultZoneRejectsTokenSignedWithOtherZoneKey() throws Exception {
-        zone.getConfig().getTokenPolicy().setKeys(Collections.singletonMap("zoneKey",
-                """
+    @MethodSource("data")
+    @ParameterizedTest
+    void zoneValidatesTokenSignedWithRemovedKey(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
+        HashMap<String, String> keys = new HashMap<>();
+        keys.put("oldKey", """
                 -----BEGIN RSA PRIVATE KEY-----
                 MIIBOgIBAAJAcEJMJ3ZT4GgdxipJe4uXvRQFfSpOneGjHfFTLjECMd0OkNtIWoIU
                 8OisQRmhBDdXk2owne2SGJcqsVN/pd9pMQIDAQABAkAV/KY1xHNBLKNIQNgLnpel
@@ -817,153 +820,216 @@ public class CheckTokenEndpointTests {
                 TgIHtKdBtKzCGS56EzqbnbNodAoJawIhAJ25dCw31BV7sI6oo0qw9tDcDtGrKRI7
                 PrJEedPFdQ1LAiEAklI6fHywUc1iayK0ppL3T1Y3mYE6t41VM3hePLzkQsUCIFjE
                 NEUwGQmhVae7YpA8dgs0wFjsfdX15q+4wwWKu9oN
-                -----END RSA PRIVATE KEY-----"""));
+                -----END RSA PRIVATE KEY-----""");
+        configureDefaultZoneKeys(keys);
+        tokenEndpointBuilder = new TokenEndpointBuilder("http://some.other.issuer");
+        OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
+
+        keys.remove("oldKey");
+        keys.put("newKey", "nc978y78o3cg5i7env587geehn89mcehgc46");
+        configureDefaultZoneKeys(keys);
+        IdentityZoneHolder.get().getConfig().getTokenPolicy().setActiveKeyId("newKey");
+
+        List<String> scopes = List.of();
+        String accessTokenValue = accessToken.getValue();
+        assertThatThrownBy(() -> endpoint.checkToken(accessTokenValue, scopes, request))
+                .isInstanceOf(InvalidTokenException.class);
+    }
+
+    @MethodSource("data")
+    @ParameterizedTest
+    void defaultZoneRejectsTokenSignedWithOtherZoneKey(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
+        zone.getConfig().getTokenPolicy().setKeys(Map.of("zoneKey",
+                """
+                        -----BEGIN RSA PRIVATE KEY-----
+                        MIIBOgIBAAJAcEJMJ3ZT4GgdxipJe4uXvRQFfSpOneGjHfFTLjECMd0OkNtIWoIU
+                        8OisQRmhBDdXk2owne2SGJcqsVN/pd9pMQIDAQABAkAV/KY1xHNBLKNIQNgLnpel
+                        rNo2XabwPVVZc/66uVaYtVSwQjOxlo7mIzp77dpiM6o0kT4v3/9eyfKZte4uB/pR
+                        AiEAtF6MXrNeqEoJVCQ6LOUFgc1HtS1tqHBk6Fo3WO44ctMCIQCfVI3bTCY09F82
+                        TgIHtKdBtKzCGS56EzqbnbNodAoJawIhAJ25dCw31BV7sI6oo0qw9tDcDtGrKRI7
+                        PrJEedPFdQ1LAiEAklI6fHywUc1iayK0ppL3T1Y3mYE6t41VM3hePLzkQsUCIFjE
+                        NEUwGQmhVae7YpA8dgs0wFjsfdX15q+4wwWKu9oN
+                        -----END RSA PRIVATE KEY-----"""));
         IdentityZoneHolder.set(zone);
         tokenServices.setTokenEndpointBuilder(new TokenEndpointBuilder("http://some.other.issuer"));
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
         IdentityZoneHolder.clear();
-        endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                endpoint.checkToken(accessToken.getValue(), List.of(), request));
     }
 
-    @Test
-    public void testValidateAudParameter() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void validateAudParameter(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        Claims result = endpoint.checkToken(accessToken.getValue(), List.of(), request);
         List<String> aud = result.getAud();
-        assertEquals(2, aud.size());
-        assertTrue(aud.contains("scim"));
-        assertTrue(aud.contains("client"));
+        assertThat(aud)
+                .hasSize(2)
+                .contains("scim", "client");
     }
 
-    @Test
-    public void by_default_query_string_is_allowed() throws Exception {
+    void internal_byDefaultQueryStringIsAllowed() throws Exception {
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
         request.setQueryString("token=" + accessToken.getValue());
         request.setParameter("token", accessToken.getValue());
         Claims claims = endpoint.checkToken(request);
-        assertNotNull(claims);
+        assertThat(claims).isNotNull();
     }
 
-    @Test
-    public void by_default_get_is_allowed() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void by_default_query_string_is_allowed(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
+        internal_byDefaultQueryStringIsAllowed();
+    }
+
+    void internal_ByDefaultGetIsAllowed() throws Exception {
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
         request.setQueryString("token=" + accessToken.getValue());
         request.setParameter("token", accessToken.getValue());
         endpoint.checkToken(request);
     }
 
-    @Test(expected = HttpRequestMethodNotSupportedException.class)
-    public void disable_query_string() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void by_default_get_is_allowed(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
+        internal_ByDefaultGetIsAllowed();
+    }
+
+    @MethodSource("data")
+    @ParameterizedTest
+    void disable_query_string(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         endpoint.setAllowQueryString(false);
-        by_default_query_string_is_allowed();
+        assertThatExceptionOfType(HttpRequestMethodNotSupportedException.class).isThrownBy(this::internal_byDefaultQueryStringIsAllowed);
     }
 
-    @Test(expected = HttpRequestMethodNotSupportedException.class)
-    public void disable_get_method() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void disable_get_method(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         endpoint.setAllowQueryString(false);
-        by_default_get_is_allowed();
+        assertThatExceptionOfType(HttpRequestMethodNotSupportedException.class).isThrownBy(this::internal_ByDefaultGetIsAllowed);
     }
 
-    @Test
-    public void testClientId() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void clientId(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-        assertEquals("client", result.getAzp());
-        assertEquals("client", result.getCid());
-        assertEquals("client", result.getClientId());
+        Claims result = endpoint.checkToken(accessToken.getValue(), List.of(), request);
+        assertThat(result.getAzp()).isEqualTo("client");
+        assertThat(result.getCid()).isEqualTo("client");
+        assertThat(result.getClientId()).isEqualTo("client");
     }
 
-    @Test
-    public void validateAuthTime() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void validateAuthTime(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-        assertNotNull(result.getAuthTime());
+        Claims result = endpoint.checkToken(accessToken.getValue(), List.of(), request);
+        assertThat(result.getAuthTime()).isNotNull();
     }
 
-    @Test(expected = TokenRevokedException.class)
-    public void revokedToken_ThrowsTokenRevokedException() throws Exception {
-        setUp();
+    @MethodSource("data")
+    @ParameterizedTest
+    void revokedToken_ThrowsTokenRevokedException(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
+        setUp(useOpaque);
         when(tokenProvisioning.retrieve(anyString(), anyString())).thenThrow(new EmptyResultDataAccessException(1));
 
         IdentityZoneHolder.get().getConfig().getTokenPolicy().setJwtRevocable(true);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        assertThatExceptionOfType(TokenRevokedException.class).isThrownBy(() ->
+                endpoint.checkToken(accessToken.getValue(), List.of(), request));
     }
 
-    @Test
-    public void validateIssuedAtIsSmallerThanExpiredAt() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void validateIssuedAtIsSmallerThanExpiredAt(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        Claims result = endpoint.checkToken(accessToken.getValue(), List.of(), request);
         Integer iat = result.getIat();
-        assertNotNull(iat);
+        assertThat(iat).isNotNull();
         Long exp = result.getExp();
-        assertNotNull(exp);
-        assertTrue(iat < exp);
+        assertThat(exp).isNotNull()
+                .isGreaterThan(iat);
     }
 
-
-    @Test
-    public void testEmailInResult() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void emailInResult(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-        assertEquals("olds@vmware.com", result.getEmail());
+        Claims result = endpoint.checkToken(accessToken.getValue(), List.of(), request);
+        assertThat(result.getEmail()).isEqualTo("olds@vmware.com");
     }
 
-    @Test
-    public void testClientIdInResult() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void clientIdInResult(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-        assertEquals("client", result.getClientId());
+        Claims result = endpoint.checkToken(accessToken.getValue(), List.of(), request);
+        assertThat(result.getClientId()).isEqualTo("client");
     }
 
-    @Test
-    public void testClientIdInAud() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void clientIdInAud(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-        assertTrue(result.getAud().contains("client"));
+        Claims result = endpoint.checkToken(accessToken.getValue(), List.of(), request);
+        assertThat(result.getAud()).contains("client");
     }
 
-
-    @Test
-    public void testExpiryResult() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void expiryResult(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        Claims result = endpoint.checkToken(accessToken.getValue(), List.of(), request);
         int expiresIn = 60 * 60 * 12;
-        assertTrue(expiresIn + Instant.now().toEpochMilli() / 1000 >= result.getExp());
+        assertThat(expiresIn + Instant.now().toEpochMilli() / 1000).isGreaterThanOrEqualTo(result.getExp());
     }
 
-    @Test
-    public void testUserAuthoritiesNotInResult() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void userAuthoritiesNotInResult(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-        assertNull(result.getAuthorities());
+        Claims result = endpoint.checkToken(accessToken.getValue(), List.of(), request);
+        assertThat(result.getAuthorities()).isNull();
     }
 
-    @Test
-    public void testClientAuthoritiesNotInResult() throws Exception {
-        OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-        assertNull(result.getAuthorities());
-    }
-
-    @Test(expected = InvalidTokenException.class)
-    public void testExpiredToken() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void expiredToken(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         UaaClientDetails clientDetails = new UaaClientDetails("client", "scim, cc", "read, write",
                 "authorization_code, password", "scim.read, scim.write", "http://localhost:8080/uaa");
         Integer validitySeconds = 1;
         clientDetails.setAccessTokenValiditySeconds(validitySeconds);
-        Map<String, UaaClientDetails> clientDetailsStore = Collections.singletonMap("client", clientDetails);
-        clientDetailsService.setClientDetailsStore(IdentityZoneHolder.get().getId(), clientDetailsStore);
+        Map<String, UaaClientDetails> aClientDetailsStore = Map.of("client", clientDetails);
+        clientDetailsService.setClientDetailsStore(IdentityZoneHolder.get().getId(), aClientDetailsStore);
         tokenServices.setClientDetailsService(clientDetailsService);
         when(timeService.getCurrentTimeMillis()).thenReturn(1000L);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-
         when(timeService.getCurrentTimeMillis()).thenReturn(nowMillis + validitySeconds.longValue() * 1000 + 1L);
-        endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                endpoint.checkToken(accessToken.getValue(), List.of(), request));
     }
 
-    @Test(expected = InvalidTokenException.class)
-    public void testDeniedApprovals() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void deniedApprovals(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
         Date oneSecondAgo = new Date(nowMillis - 1000);
         Date thirtySecondsAhead = new Date(nowMillis + 30000);
@@ -981,12 +1047,14 @@ public class CheckTokenEndpointTests {
                 .setExpiresAt(thirtySecondsAhead)
                 .setStatus(ApprovalStatus.DENIED)
                 .setLastUpdatedAt(oneSecondAgo), IdentityZoneHolder.get().getId());
-        Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-        assertNull(result.getAuthorities());
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                endpoint.checkToken(accessToken.getValue(), List.of(), request));
     }
 
-    @Test(expected = InvalidTokenException.class)
-    public void testExpiredApprovals() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void expiredApprovals(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
         approvalStore.revokeApproval(new Approval()
                 .setUserId(userId)
@@ -1000,22 +1068,27 @@ public class CheckTokenEndpointTests {
                 .setScope("read")
                 .setExpiresAt(new Date(nowMillis))
                 .setStatus(ApprovalStatus.APPROVED), IdentityZoneHolder.get().getId());
-        Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-        assertNull(result.getAuthorities());
+
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                endpoint.checkToken(accessToken.getValue(), List.of(), request));
     }
 
-    @Test
-    public void testClientOnly() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void clientOnly(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         authentication = new OAuth2Authentication(new AuthorizationRequest("client",
-                Collections.singleton("scim.read")).createOAuth2Request(), null);
+                Set.of("scim.read")).createOAuth2Request(), null);
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-        assertEquals("client", result.getClientId());
-        assertNull(result.getUserId());
+        Claims result = endpoint.checkToken(accessToken.getValue(), List.of(), request);
+        assertThat(result.getClientId()).isEqualTo("client");
+        assertThat(result.getUserId()).isNull();
     }
 
-    @Test
-    public void testValidAuthorities() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void validAuthorities(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         Map<String, String> azAttributes = new HashMap<>();
         azAttributes.put("external_group", "domain\\group1");
         azAttributes.put("external_id", "abcd1234");
@@ -1028,12 +1101,14 @@ public class CheckTokenEndpointTests {
         authentication = new OAuth2Authentication(authorizationRequest.createOAuth2Request(),
                 UaaAuthenticationTestFactory.getAuthentication(userId, userName, "olds@vmware.com"));
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-        assertEquals(result.getAzAttr(), azAttributes);
+        Claims result = endpoint.checkToken(accessToken.getValue(), List.of(), request);
+        assertThat(azAttributes).isEqualTo(result.getAzAttr());
     }
 
-    @Test
-    public void testInvalidAuthoritiesNested() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void invalidAuthoritiesNested(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         Map<String, Object> nestedAttributes = new HashMap<>();
         nestedAttributes.put("nested_group", "true");
         nestedAttributes.put("nested_id", "1234");
@@ -1048,12 +1123,14 @@ public class CheckTokenEndpointTests {
         authentication = new OAuth2Authentication(authorizationRequest.createOAuth2Request(),
                 UaaAuthenticationTestFactory.getAuthentication(userId, userName, "olds@vmware.com"));
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-        assertNull(result.getAzAttr());
+        Claims result = endpoint.checkToken(accessToken.getValue(), List.of(), request);
+        assertThat(result.getAzAttr()).isNull();
     }
 
-    @Test
-    public void testEmptyAuthorities() throws Exception {
+    @MethodSource("data")
+    @ParameterizedTest
+    void emptyAuthorities(String signerKey, boolean useOpaque) throws Exception {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
         Map<String, String> azAttributes = new HashMap<>();
         azAttributes.put("external_group", "domain\\group1");
         azAttributes.put("external_id", "abcd1234");
@@ -1066,23 +1143,21 @@ public class CheckTokenEndpointTests {
         authentication = new OAuth2Authentication(authorizationRequest.createOAuth2Request(),
                 UaaAuthenticationTestFactory.getAuthentication(userId, userName, "olds@vmware.com"));
         OAuth2AccessToken accessToken = tokenServices.createAccessToken(authentication);
-        Claims result = endpoint.checkToken(accessToken.getValue(), Collections.emptyList(), request);
-        assertNull(result.getAzAttr());
+        Claims result = endpoint.checkToken(accessToken.getValue(), List.of(), request);
+        assertThat(result.getAzAttr()).isNull();
     }
 
-    @Test
-    public void testNullAndEmptyToken() throws Exception {
-        try {
-            endpoint.checkToken(null, Collections.emptyList(), request);
-            fail("wrong state for check_token");
-        } catch (InvalidTokenException e) {
-            assertEquals("Token parameter must be set", e.getMessage());
-        }
-        try {
-            endpoint.checkToken(Strings.EMPTY, Collections.emptyList(), request);
-            fail("wrong state for check_token");
-        } catch (InvalidTokenException e) {
-            assertEquals("Token parameter must be set", e.getMessage());
-        }
+    @MethodSource("data")
+    @ParameterizedTest
+    void nullAndEmptyToken(String signerKey, boolean useOpaque) {
+        initCheckTokenEndpointTests(signerKey, useOpaque);
+        List<String> scopes = List.of();
+        assertThatThrownBy(() -> endpoint.checkToken(null, scopes, request))
+                .isInstanceOf(InvalidTokenException.class)
+                .hasMessage("Token parameter must be set");
+
+        assertThatThrownBy(() -> endpoint.checkToken(Strings.EMPTY, scopes, request))
+                .isInstanceOf(InvalidTokenException.class)
+                .hasMessage("Token parameter must be set");
     }
 }
