@@ -24,28 +24,25 @@ import com.nimbusds.jwt.JWTClaimsSet;
 import com.nimbusds.jwt.JWTParser;
 import com.nimbusds.jwt.SignedJWT;
 import org.cloudfoundry.identity.uaa.oauth.KeyInfoBuilder;
-import org.hamcrest.Matchers;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import javax.crypto.spec.SecretKeySpec;
 import java.nio.charset.StandardCharsets;
 import java.text.ParseException;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatExceptionOfType;
 import static org.cloudfoundry.identity.uaa.util.UaaStringUtils.DEFAULT_UAA_URL;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
 
-public class CommonSignerTest {
+class CommonSignerTest {
     private String rsaSigningKey;
     private String macSigningKey;
 
-    @Before
-    public void setup() {
+    @BeforeEach
+    void setup() {
         rsaSigningKey = """
                 -----BEGIN RSA PRIVATE KEY-----
                 MIIBOQIBAAJAcjAgsHEfrUxeTFwQPb17AkZ2Im4SfZdpY8Ada9pZfxXz1PZSqv9T
@@ -60,88 +57,90 @@ public class CommonSignerTest {
     }
 
     @Test
-    public void test_rsa_key_null_id() {
+    void rsa_key_null_id() {
         CommonSigner signer = new CommonSigner(null, rsaSigningKey, "http://localhost/uaa");
-        assertEquals("RS256", signer.algorithm());
-        assertNull(signer.keyId());
+        assertThat(signer.algorithm()).isEqualTo("RS256");
+        assertThat(signer.keyId()).isNull();
     }
 
     @Test
-    public void test_rsa_key_with_id() {
+    void rsa_key_with_id() {
         CommonSigner signer = new CommonSigner("id", rsaSigningKey, "http://localhost/uaa");
-        assertEquals("RS256", signer.algorithm());
-        assertEquals("id", signer.keyId());
+        assertThat(signer.algorithm()).isEqualTo("RS256");
+        assertThat(signer.keyId()).isEqualTo("id");
     }
 
     @Test
-    public void test_mac_key_null_id() {
+    void mac_key_null_id() {
         CommonSigner signer = new CommonSigner(null, macSigningKey, "http://localhost/uaa");
-        assertEquals("HS256", signer.algorithm());
-        assertNull(signer.keyId());
+        assertThat(signer.algorithm()).isEqualTo("HS256");
+        assertThat(signer.keyId()).isNull();
     }
 
     @Test
-    public void test_mac_key_with_id() {
+    void mac_key_with_id() {
         CommonSigner signer = new CommonSigner("id", macSigningKey, "http://localhost/uaa");
-        assertEquals("HS256", signer.algorithm());
-        assertEquals("id", signer.keyId());
-        assertEquals("http://localhost/uaa", signer.keyURL());
-    }
-
-    @Test(expected = IllegalArgumentException.class)
-    public void null_key_is_rejected() {
-        new CommonSigner("id", null, "http://localhost/uaa");
+        assertThat(signer.algorithm()).isEqualTo("HS256");
+        assertThat(signer.keyId()).isEqualTo("id");
+        assertThat(signer.keyURL()).isEqualTo("http://localhost/uaa");
     }
 
     @Test
-    public void test_mac_signing() throws JOSEException, ParseException {
+    void null_key_is_rejected() {
+        assertThatExceptionOfType(IllegalArgumentException.class).isThrownBy(() -> {
+            new CommonSigner("id", null, "http://localhost/uaa");
+        });
+    }
+
+    @Test
+    void mac_signing() throws JOSEException, ParseException {
         final String jwtFromIo = "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJuYW1lIjoiSm9obiBEb2UiLCJzdWIiOiIxMjM0NTY3ODkwIn0.hUTNPTwAP4RQFr_d_GOwXrVOJsX1-PWAvHSsg-CSQPk";
         CommonSigner signer = new CommonSigner(null, macSigningKey, DEFAULT_UAA_URL);
-        assertEquals("HS256", signer.algorithm());
-        assertNull(signer.keyId());
+        assertThat(signer.algorithm()).isEqualTo("HS256");
+        assertThat(signer.keyId()).isNull();
         SignedJWT inJwt = SignedJWT.parse(jwtFromIo);
         Base64URL jwt = signer.sign(inJwt.getHeader(), inJwt.getSigningInput());
-        assertEquals(inJwt.getSignature(), jwt);
+        assertThat(jwt).isEqualTo(inJwt.getSignature());
         JWSHeader header = new JWSHeader.Builder(JWSAlgorithm.HS256).type(JOSEObjectType.JWT).build();
         JWTClaimsSet claimsSet = new JWTClaimsSet.Builder().subject("1234567890").claim("name", "John Doe").build();
         Base64URL signature = signer.sign(header, new SignedJWT(header, claimsSet).getSigningInput());
-        assertEquals(inJwt.getSignature(), signature);
+        assertThat(signature).isEqualTo(inJwt.getSignature());
         UaaMacSigner uaaMacSigner = new UaaMacSigner(macSigningKey);
-        assertEquals(new SecretKeySpec(macSigningKey.getBytes(StandardCharsets.UTF_8), "HS256").getEncoded().length, uaaMacSigner.getSecret().length);
+        assertThat(uaaMacSigner.getSecret()).hasSameSizeAs(new SecretKeySpec(macSigningKey.getBytes(StandardCharsets.UTF_8), "HS256").getEncoded());
     }
 
     @Test
-    public void test_mac_signing_options() {
+    void mac_signing_options() {
         CommonSigner signer = new CommonSigner(null, macSigningKey, "http://localhost/uaa");
-        assertEquals(UaaMacSigner.SUPPORTED_ALGORITHMS, signer.supportedJWSAlgorithms());
-        assertNotNull(signer.getJCAContext());
+        assertThat(signer.supportedJWSAlgorithms()).isEqualTo(UaaMacSigner.SUPPORTED_ALGORITHMS);
+        assertThat(signer.getJCAContext()).isNotNull();
     }
 
     @Test
-    public void test_nimbus_singing_with_single_aud_value() throws JOSEException, ParseException {
+    void nimbus_singing_with_single_aud_value() throws JOSEException, ParseException {
         // given
-        Map<String, Object> objectMap = Map.of("sub", "1234567890", "name", "John Doe", "aud", Arrays.asList("single"));
+        Map<String, Object> objectMap = Map.of("sub", "1234567890", "name", "John Doe", "aud", List.of("single"));
         // when
         CommonSigner signer = new CommonSigner("id", rsaSigningKey, "http://localhost/uaa");
-        assertEquals("RS256", signer.algorithm());
-        assertEquals("id", signer.keyId());
+        assertThat(signer.algorithm()).isEqualTo("RS256");
+        assertThat(signer.keyId()).isEqualTo("id");
         JWSHeader header = new JWSHeader.Builder(JWSAlgorithm.RS256).type(JOSEObjectType.JWT).build();
         JWTClaimsSet claimsSet = JWTClaimsSet.parse(objectMap);
         SignedJWT resultedJwt = new SignedJWT(header, claimsSet);
         resultedJwt.sign(signer);
         String payLoadString = JWTParser.parse(resultedJwt.serialize()).getParsedParts()[1].decodeToString();
         // then
-        assertThat(payLoadString, Matchers.containsString("\"aud\":\"single\""));
+        assertThat(payLoadString).contains("\"aud\":\"single\"");
     }
 
     @Test
-    public void test_uaa_singing_with_single_aud_value() throws ParseException {
+    void uaa_singing_with_single_aud_value() throws ParseException {
         // given
-        Map<String, Object> objectMap = Map.of("sub", "1234567890", "name", "John Doe", "aud", Arrays.asList("single"));
+        Map<String, Object> objectMap = Map.of("sub", "1234567890", "name", "John Doe", "aud", List.of("single"));
         // when
         String uaaResultedJwt = JwtHelper.encode(objectMap, KeyInfoBuilder.build("id", rsaSigningKey, "http://localhost/uaa")).getEncoded();
         String payLoadString = JWTParser.parse(uaaResultedJwt).getParsedParts()[1].decodeToString();
         // then
-        assertThat(payLoadString, Matchers.containsString("\"aud\":[\"single\"]"));
+        assertThat(payLoadString).contains("\"aud\":[\"single\"]");
     }
 }
