@@ -4,305 +4,324 @@ import org.cloudfoundry.identity.uaa.client.UaaClientDetails;
 import org.cloudfoundry.identity.uaa.oauth.common.exceptions.InvalidGrantException;
 import org.cloudfoundry.identity.uaa.oauth.common.exceptions.InvalidRequestException;
 import org.cloudfoundry.identity.uaa.oauth.common.exceptions.RedirectMismatchException;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.fail;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.fail;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatExceptionOfType;
 
 /**
  * Moved test class of from spring-security-oauth2 into UAA
  * Scope: Test class
  */
-public class DefaultRedirectResolverTests {
+class DefaultRedirectResolverTests {
 
     private DefaultRedirectResolver resolver;
 
     private UaaClientDetails client;
 
-    @Before
-    public void setup() {
+    @BeforeEach
+    void setup() {
         client = new UaaClientDetails();
         client.setAuthorizedGrantTypes(Collections.singleton("authorization_code"));
         resolver = new DefaultRedirectResolver();
     }
 
     @Test
-    public void testRedirectMatchesRegisteredValue() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com"));
+    void redirectMatchesRegisteredValue() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com"));
         client.setRegisteredRedirectUri(redirectUris);
         String requestedRedirect = "https://anywhere.com";
-        assertEquals(requestedRedirect, resolver.resolveRedirect(requestedRedirect, client));
+        assertThat(resolver.resolveRedirect(requestedRedirect, client)).isEqualTo(requestedRedirect);
     }
 
-    @Test(expected = InvalidRequestException.class)
-    public void testRedirectWithNoRegisteredValue() throws Exception {
+    @Test
+    void redirectWithNoRegisteredValue() {
         String requestedRedirect = "https://anywhere.com/myendpoint";
-        resolver.resolveRedirect(requestedRedirect, client);
+        assertThatExceptionOfType(InvalidRequestException.class).isThrownBy(() ->
+                resolver.resolveRedirect(requestedRedirect, client));
     }
 
     // If only one redirect has been registered, then we should use it
     @Test
-    public void testRedirectWithNoRequestedValue() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com"));
+    void redirectWithNoRequestedValue() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com"));
         client.setRegisteredRedirectUri(redirectUris);
         resolver.resolveRedirect(null, client);
     }
 
     // If multiple redirects registered, then we should get an exception
-    @Test(expected = RedirectMismatchException.class)
-    public void testRedirectWithNoRequestedValueAndMultipleRegistered() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com", "https://nowhere.com"));
+    @Test
+    void redirectWithNoRequestedValueAndMultipleRegistered() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com", "https://nowhere.com"));
         client.setRegisteredRedirectUri(redirectUris);
-        resolver.resolveRedirect(null, client);
+        assertThatExceptionOfType(RedirectMismatchException.class).isThrownBy(() ->
+                resolver.resolveRedirect(null, client));
     }
 
-    @Test(expected = InvalidGrantException.class)
-    public void testNoGrantType() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com", "https://nowhere.com"));
+    @Test
+    void noGrantType() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com", "https://nowhere.com"));
         client.setRegisteredRedirectUri(redirectUris);
         client.setAuthorizedGrantTypes(Collections.<String>emptyList());
-        resolver.resolveRedirect(null, client);
+        assertThatExceptionOfType(InvalidGrantException.class).isThrownBy(() ->
+                resolver.resolveRedirect(null, client));
     }
 
-    @Test(expected = InvalidGrantException.class)
-    public void testWrongGrantType() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com", "https://nowhere.com"));
+    @Test
+    void wrongGrantType() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com", "https://nowhere.com"));
         client.setRegisteredRedirectUri(redirectUris);
         client.setAuthorizedGrantTypes(Collections.singleton("client_credentials"));
-        resolver.resolveRedirect(null, client);
+        assertThatExceptionOfType(InvalidGrantException.class).isThrownBy(() ->
+                resolver.resolveRedirect(null, client));
     }
 
-    @Test(expected = InvalidGrantException.class)
-    public void testWrongCustomGrantType() throws Exception {
+    @Test
+    void wrongCustomGrantType() {
         resolver.setRedirectGrantTypes(Collections.singleton("foo"));
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com", "https://nowhere.com"));
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com", "https://nowhere.com"));
         client.setRegisteredRedirectUri(redirectUris);
-        resolver.resolveRedirect(null, client);
+        assertThatExceptionOfType(InvalidGrantException.class).isThrownBy(() ->
+                resolver.resolveRedirect(null, client));
     }
 
-    @Test(expected = RedirectMismatchException.class)
-    public void testRedirectNotMatching() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://nowhere.com"));
+    @Test
+    void redirectNotMatching() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://nowhere.com"));
         String requestedRedirect = "https://anywhere.com/myendpoint";
         client.setRegisteredRedirectUri(redirectUris);
-        assertEquals(redirectUris.iterator().next(), resolver.resolveRedirect(requestedRedirect, client));
+        assertThatExceptionOfType(RedirectMismatchException.class).isThrownBy(() ->
+                assertThat(resolver.resolveRedirect(requestedRedirect, client)).isEqualTo(redirectUris.iterator().next()));
     }
 
-    @Test(expected = RedirectMismatchException.class)
-    public void testRedirectNotMatchingWithTraversal() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com/foo"));
+    @Test
+    void redirectNotMatchingWithTraversal() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com/foo"));
         String requestedRedirect = "https://anywhere.com/foo/../bar";
         client.setRegisteredRedirectUri(redirectUris);
-        assertEquals(redirectUris.iterator().next(), resolver.resolveRedirect(requestedRedirect, client));
+        assertThatExceptionOfType(RedirectMismatchException.class).isThrownBy(() ->
+                assertThat(resolver.resolveRedirect(requestedRedirect, client)).isEqualTo(redirectUris.iterator().next()));
     }
 
     // gh-1331
-    @Test(expected = RedirectMismatchException.class)
-    public void testRedirectNotMatchingWithHexEncodedTraversal() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com/foo"));
+    @Test
+    void redirectNotMatchingWithHexEncodedTraversal() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com/foo"));
         client.setRegisteredRedirectUri(redirectUris);
-        String requestedRedirect = "https://anywhere.com/foo/%2E%2E";	// hexadecimal encoding of '..' represents '%2E%2E'
-        resolver.resolveRedirect(requestedRedirect, client);
+        String requestedRedirect = "https://anywhere.com/foo/%2E%2E";
+        assertThatExceptionOfType(RedirectMismatchException.class).isThrownBy(() ->    // hexadecimal encoding of '..' represents '%2E%2E'
+                resolver.resolveRedirect(requestedRedirect, client));
     }
 
     // gh-747
-    @Test(expected = RedirectMismatchException.class)
-    public void testRedirectNotMatchingSubdomain() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com/foo"));
+    @Test
+    void redirectNotMatchingSubdomain() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com/foo"));
         client.setRegisteredRedirectUri(redirectUris);
-        resolver.resolveRedirect("https://2anywhere.com/foo", client);
+        assertThatExceptionOfType(RedirectMismatchException.class).isThrownBy(() ->
+                resolver.resolveRedirect("https://2anywhere.com/foo", client));
     }
 
     // gh-747
     // gh-747
     @Test
-    public void testRedirectMatchingSubdomain() throws Exception {
+    void redirectMatchingSubdomain() {
         resolver.setMatchSubdomains(true);
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com/foo"));
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com/foo"));
         String requestedRedirect = "https://2.anywhere.com/foo";
         client.setRegisteredRedirectUri(redirectUris);
-        assertEquals(requestedRedirect, resolver.resolveRedirect(requestedRedirect, client));
+        assertThat(resolver.resolveRedirect(requestedRedirect, client)).isEqualTo(requestedRedirect);
     }
 
-    @Test(expected = RedirectMismatchException.class)
-    public void testRedirectMatchSubdomainsDefaultsFalse() {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com"));
+    @Test
+    void redirectMatchSubdomainsDefaultsFalse() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com"));
         client.setRegisteredRedirectUri(redirectUris);
-        resolver.resolveRedirect("https://2.anywhere.com", client);
-    }
-
-    // gh-746
-    @Test(expected = RedirectMismatchException.class)
-    public void testRedirectNotMatchingPort() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com:90"));
-        client.setRegisteredRedirectUri(redirectUris);
-        resolver.resolveRedirect("https://anywhere.com:91/foo", client);
+        assertThatExceptionOfType(RedirectMismatchException.class).isThrownBy(() ->
+                resolver.resolveRedirect("https://2.anywhere.com", client));
     }
 
     // gh-746
     @Test
-    public void testRedirectMatchingPort() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com:90"));
+    void redirectNotMatchingPort() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com:90"));
+        client.setRegisteredRedirectUri(redirectUris);
+        assertThatExceptionOfType(RedirectMismatchException.class).isThrownBy(() ->
+                resolver.resolveRedirect("https://anywhere.com:91/foo", client));
+    }
+
+    // gh-746
+    @Test
+    void redirectMatchingPort() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com:90"));
         client.setRegisteredRedirectUri(redirectUris);
         String requestedRedirect = "https://anywhere.com:90";
-        assertEquals(requestedRedirect, resolver.resolveRedirect(requestedRedirect, client));
-    }
-
-    // gh-746
-    @Test(expected = RedirectMismatchException.class)
-    public void testRedirectRegisteredPortSetRequestedPortNotSet() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com:90"));
-        client.setRegisteredRedirectUri(redirectUris);
-        resolver.resolveRedirect("https://anywhere.com/foo", client);
-    }
-
-    // gh-746
-    @Test(expected = RedirectMismatchException.class)
-    public void testRedirectRegisteredPortNotSetRequestedPortSet() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com"));
-        client.setRegisteredRedirectUri(redirectUris);
-        resolver.resolveRedirect("https://anywhere.com:8443/foo", client);
+        assertThat(resolver.resolveRedirect(requestedRedirect, client)).isEqualTo(requestedRedirect);
     }
 
     // gh-746
     @Test
-    public void testRedirectMatchPortsFalse() throws Exception {
+    void redirectRegisteredPortSetRequestedPortNotSet() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com:90"));
+        client.setRegisteredRedirectUri(redirectUris);
+        assertThatExceptionOfType(RedirectMismatchException.class).isThrownBy(() ->
+                resolver.resolveRedirect("https://anywhere.com/foo", client));
+    }
+
+    // gh-746
+    @Test
+    void redirectRegisteredPortNotSetRequestedPortSet() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com"));
+        client.setRegisteredRedirectUri(redirectUris);
+        assertThatExceptionOfType(RedirectMismatchException.class).isThrownBy(() ->
+                resolver.resolveRedirect("https://anywhere.com:8443/foo", client));
+    }
+
+    // gh-746
+    @Test
+    void redirectMatchPortsFalse() {
         resolver.setMatchPorts(false);
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com:90"));
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com:90"));
         client.setRegisteredRedirectUri(redirectUris);
         String requestedRedirect = "https://anywhere.com:90";
-        assertEquals(requestedRedirect, resolver.resolveRedirect(requestedRedirect, client));
+        assertThat(resolver.resolveRedirect(requestedRedirect, client)).isEqualTo(requestedRedirect);
     }
 
     // gh-1386
     @Test
-    public void testRedirectNotMatchingReturnsGenericErrorMessage() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://nowhere.com"));
+    void redirectNotMatchingReturnsGenericErrorMessage() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://nowhere.com"));
         String requestedRedirect = "https://anywhere.com/myendpoint";
         client.setRegisteredRedirectUri(redirectUris);
         try {
             resolver.resolveRedirect(requestedRedirect, client);
-            fail();
+            fail("");
         } catch (RedirectMismatchException ex) {
-            assertEquals("Invalid redirect uri does not match one of the registered values.", ex.getMessage());
+            assertThat(ex.getMessage()).isEqualTo("Invalid redirect uri does not match one of the registered values.");
         }
     }
 
     // gh-1566
-    @Test(expected = RedirectMismatchException.class)
-    public void testRedirectRegisteredUserInfoNotMatching() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://userinfo@anywhere.com"));
+    @Test
+    void redirectRegisteredUserInfoNotMatching() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://userinfo@anywhere.com"));
         client.setRegisteredRedirectUri(redirectUris);
-        resolver.resolveRedirect("https://otheruserinfo@anywhere.com", client);
+        assertThatExceptionOfType(RedirectMismatchException.class).isThrownBy(() ->
+                resolver.resolveRedirect("https://otheruserinfo@anywhere.com", client));
     }
 
     // gh-1566
-    @Test(expected = RedirectMismatchException.class)
-    public void testRedirectRegisteredNoUserInfoNotMatching() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://userinfo@anywhere.com"));
+    @Test
+    void redirectRegisteredNoUserInfoNotMatching() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://userinfo@anywhere.com"));
         client.setRegisteredRedirectUri(redirectUris);
-        resolver.resolveRedirect("https://anywhere.com", client);
+        assertThatExceptionOfType(RedirectMismatchException.class).isThrownBy(() ->
+                resolver.resolveRedirect("https://anywhere.com", client));
     }
 
     // gh-1566
-    @Test()
-    public void testRedirectRegisteredUserInfoMatching() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://userinfo@anywhere.com"));
+    @Test
+    void redirectRegisteredUserInfoMatching() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://userinfo@anywhere.com"));
         client.setRegisteredRedirectUri(redirectUris);
         String requestedRedirect = "https://userinfo@anywhere.com";
-        assertEquals(requestedRedirect, resolver.resolveRedirect(requestedRedirect, client));
+        assertThat(resolver.resolveRedirect(requestedRedirect, client)).isEqualTo(requestedRedirect);
     }
 
     // gh-1566
-    @Test()
-    public void testRedirectRegisteredFragmentIgnoredAndStripped() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://userinfo@anywhere.com/foo/bar#baz"));
+    @Test
+    void redirectRegisteredFragmentIgnoredAndStripped() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://userinfo@anywhere.com/foo/bar#baz"));
         client.setRegisteredRedirectUri(redirectUris);
         String requestedRedirect = "https://userinfo@anywhere.com/foo/bar";
-        assertEquals(requestedRedirect, resolver.resolveRedirect(requestedRedirect + "#bar", client));
+        assertThat(resolver.resolveRedirect(requestedRedirect + "#bar", client)).isEqualTo(requestedRedirect);
     }
 
     // gh-1566
-    @Test()
-    public void testRedirectRegisteredQueryParamsMatching() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com/?p1=v1&p2=v2"));
+    @Test
+    void redirectRegisteredQueryParamsMatching() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com/?p1=v1&p2=v2"));
         client.setRegisteredRedirectUri(redirectUris);
         String requestedRedirect = "https://anywhere.com/?p1=v1&p2=v2";
-        assertEquals(requestedRedirect, resolver.resolveRedirect(requestedRedirect, client));
+        assertThat(resolver.resolveRedirect(requestedRedirect, client)).isEqualTo(requestedRedirect);
     }
 
     // gh-1566
-    @Test()
-    public void testRedirectRegisteredQueryParamsMatchingIgnoringAdditionalParams() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com/?p1=v1&p2=v2"));
+    @Test
+    void redirectRegisteredQueryParamsMatchingIgnoringAdditionalParams() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com/?p1=v1&p2=v2"));
         client.setRegisteredRedirectUri(redirectUris);
         String requestedRedirect = "https://anywhere.com/?p1=v1&p2=v2&p3=v3";
-        assertEquals(requestedRedirect, resolver.resolveRedirect(requestedRedirect, client));
+        assertThat(resolver.resolveRedirect(requestedRedirect, client)).isEqualTo(requestedRedirect);
     }
 
     // gh-1566
-    @Test()
-    public void testRedirectRegisteredQueryParamsMatchingDifferentOrder() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com/?p1=v1&p2=v2"));
+    @Test
+    void redirectRegisteredQueryParamsMatchingDifferentOrder() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com/?p1=v1&p2=v2"));
         client.setRegisteredRedirectUri(redirectUris);
         String requestedRedirect = "https://anywhere.com/?p2=v2&p1=v1";
-        assertEquals(requestedRedirect, resolver.resolveRedirect(requestedRedirect, client));
-    }
-
-    // gh-1566
-    @Test(expected = RedirectMismatchException.class)
-    public void testRedirectRegisteredQueryParamsWithDifferentValues() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com/?p1=v1&p2=v2"));
-        client.setRegisteredRedirectUri(redirectUris);
-        resolver.resolveRedirect("https://anywhere.com/?p1=v1&p2=v3", client);
-    }
-
-    // gh-1566
-    @Test(expected = RedirectMismatchException.class)
-    public void testRedirectRegisteredQueryParamsNotMatching() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com/?p1=v1"));
-        client.setRegisteredRedirectUri(redirectUris);
-        resolver.resolveRedirect("https://anywhere.com/?p2=v2", client);
-    }
-
-    // gh-1566
-    @Test(expected = RedirectMismatchException.class)
-    public void testRedirectRegisteredQueryParamsPartiallyMatching() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com/?p1=v1&p2=v2"));
-        client.setRegisteredRedirectUri(redirectUris);
-        resolver.resolveRedirect("https://anywhere.com/?p2=v2&p3=v3", client);
+        assertThat(resolver.resolveRedirect(requestedRedirect, client)).isEqualTo(requestedRedirect);
     }
 
     // gh-1566
     @Test
-    public void testRedirectRegisteredQueryParamsMatchingWithMultipleValuesInRegistered() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com/?p1=v11&p1=v12"));
+    void redirectRegisteredQueryParamsWithDifferentValues() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com/?p1=v1&p2=v2"));
+        client.setRegisteredRedirectUri(redirectUris);
+        assertThatExceptionOfType(RedirectMismatchException.class).isThrownBy(() ->
+                resolver.resolveRedirect("https://anywhere.com/?p1=v1&p2=v3", client));
+    }
+
+    // gh-1566
+    @Test
+    void redirectRegisteredQueryParamsNotMatching() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com/?p1=v1"));
+        client.setRegisteredRedirectUri(redirectUris);
+        assertThatExceptionOfType(RedirectMismatchException.class).isThrownBy(() ->
+                resolver.resolveRedirect("https://anywhere.com/?p2=v2", client));
+    }
+
+    // gh-1566
+    @Test
+    void redirectRegisteredQueryParamsPartiallyMatching() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com/?p1=v1&p2=v2"));
+        client.setRegisteredRedirectUri(redirectUris);
+        assertThatExceptionOfType(RedirectMismatchException.class).isThrownBy(() ->
+                resolver.resolveRedirect("https://anywhere.com/?p2=v2&p3=v3", client));
+    }
+
+    // gh-1566
+    @Test
+    void redirectRegisteredQueryParamsMatchingWithMultipleValuesInRegistered() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com/?p1=v11&p1=v12"));
         client.setRegisteredRedirectUri(redirectUris);
         String requestedRedirect = "https://anywhere.com/?p1=v11&p1=v12";
-        assertEquals(requestedRedirect, resolver.resolveRedirect(requestedRedirect, client));
+        assertThat(resolver.resolveRedirect(requestedRedirect, client)).isEqualTo(requestedRedirect);
     }
 
     // gh-1566
     @Test
-    public void testRedirectRegisteredQueryParamsMatchingWithParamWithNoValue() throws Exception {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("https://anywhere.com/?p1&p2=v2"));
+    void redirectRegisteredQueryParamsMatchingWithParamWithNoValue() {
+        Set<String> redirectUris = new HashSet<>(List.of("https://anywhere.com/?p1&p2=v2"));
         client.setRegisteredRedirectUri(redirectUris);
         String requestedRedirect = "https://anywhere.com/?p1&p2=v2";
-        assertEquals(requestedRedirect, resolver.resolveRedirect(requestedRedirect, client));
+        assertThat(resolver.resolveRedirect(requestedRedirect, client)).isEqualTo(requestedRedirect);
     }
 
     // gh-1618
     @Test
-    public void testRedirectNoHost() {
-        Set<String> redirectUris = new HashSet<>(Arrays.asList("scheme:/path"));
+    void redirectNoHost() {
+        Set<String> redirectUris = new HashSet<>(List.of("scheme:/path"));
         client.setRegisteredRedirectUri(redirectUris);
         String requestedRedirect = "scheme:/path";
-        assertEquals(requestedRedirect, resolver.resolveRedirect(requestedRedirect, client));
+        assertThat(resolver.resolveRedirect(requestedRedirect, client)).isEqualTo(requestedRedirect);
     }
 }
