@@ -13,7 +13,8 @@ import org.cloudfoundry.identity.uaa.oauth.provider.TokenRequest;
 import org.cloudfoundry.identity.uaa.oauth.provider.request.DefaultOAuth2RequestFactory;
 import org.cloudfoundry.identity.uaa.oauth.provider.token.DefaultTokenServices;
 import org.cloudfoundry.identity.uaa.oauth.provider.token.InMemoryTokenStore;
-import org.junit.Test;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.LockedException;
@@ -24,23 +25,22 @@ import org.springframework.security.core.authority.AuthorityUtils;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatExceptionOfType;
 
 /**
  * Moved test class of from spring-security-oauth2 into UAA
  * Scope: Test class
  */
-public class ResourceOwnerPasswordTokenGranterTests {
+class ResourceOwnerPasswordTokenGranterTests {
 
     private Authentication validUser = new UsernamePasswordAuthenticationToken("foo", "bar",
-            Arrays.asList(new SimpleGrantedAuthority("ROLE_USER")));
+            List.of(new SimpleGrantedAuthority("ROLE_USER")));
 
     private final UaaClientDetails client = new UaaClientDetails("foo", "resource", "scope", "password", "ROLE_USER");
 
@@ -74,30 +74,31 @@ public class ResourceOwnerPasswordTokenGranterTests {
         parameters.put("client_id", clientId);
 
         tokenRequest = requestFactory.createTokenRequest(parameters, clientDetails);
-
     }
 
-    //@Test
-    public void testSunnyDay() {
+    @Test
+    @Disabled("since 2024-05-08")
+    void testSunnyDay() {
         ResourceOwnerPasswordTokenGranter granter = new ResourceOwnerPasswordTokenGranter(authenticationManager,
                 providerTokenServices, clientDetailsService, requestFactory);
         OAuth2AccessToken token = granter.grant("password", tokenRequest);
         OAuth2Authentication authentication = providerTokenServices.loadAuthentication(token.getValue());
-        assertTrue(authentication.isAuthenticated());
+        assertThat(authentication.isAuthenticated()).isTrue();
     }
 
-    //@Test
-    public void testPasswordRemoved() {
+    @Test
+    @Disabled("since 2024-05-08")
+    void testPasswordRemoved() {
         ResourceOwnerPasswordTokenGranter granter = new ResourceOwnerPasswordTokenGranter(authenticationManager,
                 providerTokenServices, clientDetailsService, requestFactory);
         OAuth2AccessToken token = granter.grant("password", tokenRequest);
         OAuth2Authentication authentication = providerTokenServices.loadAuthentication(token.getValue());
-        assertNotNull(authentication.getOAuth2Request().getRequestParameters().get("username"));
-        assertNull(authentication.getOAuth2Request().getRequestParameters().get("password"));
+        assertThat(authentication.getOAuth2Request().getRequestParameters()).containsKey("username")
+                .doesNotContainKey("password");
     }
 
-    @Test(expected = NullPointerException.class)
-    public void testExtraParameters() {
+    @Test
+    void extraParameters() {
         authenticationManager = new AuthenticationManager() {
             @Override
             public Authentication authenticate(Authentication authentication) throws AuthenticationException {
@@ -106,7 +107,7 @@ public class ResourceOwnerPasswordTokenGranterTests {
                             AuthorityUtils.commaSeparatedStringToAuthorityList("ROLE_USER"));
                     @SuppressWarnings("unchecked")
                     Map<String, String> details = (Map<String, String>) authentication.getDetails();
-                    assertNull(details.get("password"));
+                    assertThat(details.get("password")).isNull();
                     return user;
                 }
                 return authentication;
@@ -114,53 +115,59 @@ public class ResourceOwnerPasswordTokenGranterTests {
         };
         ResourceOwnerPasswordTokenGranter granter = new ResourceOwnerPasswordTokenGranter(authenticationManager,
                 providerTokenServices, clientDetailsService, requestFactory);
-        granter.grant("password", tokenRequest);
+        assertThatExceptionOfType(NullPointerException.class).isThrownBy(() ->
+                granter.grant("password", tokenRequest));
     }
 
-    @Test(expected = InvalidGrantException.class)
-    public void testBadCredentials() {
+    @Test
+    void badCredentials() {
         ResourceOwnerPasswordTokenGranter granter = new ResourceOwnerPasswordTokenGranter(new AuthenticationManager() {
             public Authentication authenticate(Authentication authentication) throws AuthenticationException {
                 throw new BadCredentialsException("test");
             }
         }, providerTokenServices, clientDetailsService, requestFactory);
-        granter.grant("password", tokenRequest);
+        assertThatExceptionOfType(InvalidGrantException.class).isThrownBy(() ->
+                granter.grant("password", tokenRequest));
     }
 
-    @Test(expected = InvalidClientException.class)
-    public void testGrantTypeNotSupported() {
+    @Test
+    void grantTypeNotSupported() {
         ResourceOwnerPasswordTokenGranter granter = new ResourceOwnerPasswordTokenGranter(authenticationManager,
                 providerTokenServices, clientDetailsService, requestFactory);
         client.setAuthorizedGrantTypes(Collections.singleton("client_credentials"));
-        granter.grant("password", tokenRequest);
+        assertThatExceptionOfType(InvalidClientException.class).isThrownBy(() ->
+                granter.grant("password", tokenRequest));
     }
 
-    @Test(expected = InvalidGrantException.class)
-    public void testAccountLocked() {
+    @Test
+    void accountLocked() {
         ResourceOwnerPasswordTokenGranter granter = new ResourceOwnerPasswordTokenGranter(new AuthenticationManager() {
             public Authentication authenticate(Authentication authentication) throws AuthenticationException {
                 throw new LockedException("test");
             }
         }, providerTokenServices, clientDetailsService, requestFactory);
-        granter.grant("password", tokenRequest);
+        assertThatExceptionOfType(InvalidGrantException.class).isThrownBy(() ->
+                granter.grant("password", tokenRequest));
     }
 
-    @Test(expected = InvalidGrantException.class)
-    public void testUnauthenticated() {
+    @Test
+    void unauthenticated() {
         validUser = new UsernamePasswordAuthenticationToken("foo", "bar");
         ResourceOwnerPasswordTokenGranter granter = new ResourceOwnerPasswordTokenGranter(authenticationManager,
                 providerTokenServices, clientDetailsService, requestFactory);
-        granter.grant("password", tokenRequest);
+        assertThatExceptionOfType(InvalidGrantException.class).isThrownBy(() ->
+                granter.grant("password", tokenRequest));
     }
 
-    @Test(expected = InvalidGrantException.class)
-    public void testUsernameNotFound() {
+    @Test
+    void usernameNotFound() {
         ResourceOwnerPasswordTokenGranter granter = new ResourceOwnerPasswordTokenGranter(new AuthenticationManager() {
             @Override
             public Authentication authenticate(final Authentication authentication) throws AuthenticationException {
                 throw new UsernameNotFoundException("test");
             }
         }, providerTokenServices, clientDetailsService, requestFactory);
-        granter.grant("password", tokenRequest);
+        assertThatExceptionOfType(InvalidGrantException.class).isThrownBy(() ->
+                granter.grant("password", tokenRequest));
     }
 }
