@@ -16,7 +16,6 @@ package org.cloudfoundry.identity.uaa.util;
 
 import com.google.common.collect.Lists;
 import com.nimbusds.jose.JWSSigner;
-import com.nimbusds.jose.KeyLengthException;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.core.LogEvent;
 import org.apache.logging.log4j.core.LoggerContext;
@@ -43,13 +42,11 @@ import org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder;
 import org.cloudfoundry.identity.uaa.zone.IdentityZoneProvisioning;
 import org.cloudfoundry.identity.uaa.zone.InMemoryMultitenantClientServices;
 import org.cloudfoundry.identity.uaa.zone.beans.IdentityZoneManager;
-import org.junit.After;
-import org.junit.AfterClass;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.security.core.GrantedAuthority;
@@ -58,7 +55,6 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
 import javax.crypto.spec.SecretKeySpec;
 import java.nio.charset.StandardCharsets;
-import java.text.ParseException;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -67,9 +63,11 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatExceptionOfType;
 import static org.cloudfoundry.identity.uaa.oauth.client.ClientConstants.REQUIRED_USER_GROUPS;
 import static org.cloudfoundry.identity.uaa.oauth.token.ClaimConstants.EMAIL;
 import static org.cloudfoundry.identity.uaa.oauth.token.ClaimConstants.GRANTED_SCOPES;
@@ -83,15 +81,7 @@ import static org.cloudfoundry.identity.uaa.util.JwtTokenSignedByThisUAA.buildRe
 import static org.cloudfoundry.identity.uaa.util.UaaMapUtils.entry;
 import static org.cloudfoundry.identity.uaa.util.UaaMapUtils.map;
 import static org.cloudfoundry.identity.uaa.util.UaaStringUtils.DEFAULT_UAA_URL;
-import static org.hamcrest.CoreMatchers.equalTo;
-import static org.hamcrest.CoreMatchers.notNullValue;
-import static org.hamcrest.CoreMatchers.nullValue;
-import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.hamcrest.Matchers.containsString;
-import static org.hamcrest.Matchers.hasItem;
-import static org.hamcrest.Matchers.hasItems;
-import static org.hamcrest.Matchers.not;
 import static org.mockito.Mockito.anyString;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
@@ -104,7 +94,7 @@ import static org.mockito.hamcrest.MockitoHamcrest.argThat;
 public class JwtTokenSignedByThisUAATest {
     public static final String CLIENT_ID = "app";
     public static final String USER_ID = "a7f07bf6-e720-4652-8999-e980189cef54";
-    private final SignatureVerifier verifier = new KeyInfo("some-key-id", macSigningKeySecret, DEFAULT_UAA_URL, "HS256", null).getVerifier();
+    private final SignatureVerifier verifier = new KeyInfo("some-key-id", MAC_SIGNING_KEY_SECRET, DEFAULT_UAA_URL, "HS256", null).getVerifier();
 
     private final Instant oneSecondAfterTheTokenExpires = Instant.ofEpochSecond(1458997132 + 1);
     private final Instant oneSecondBeforeTheTokenExpires = Instant.ofEpochSecond(1458997132 - 1);
@@ -121,11 +111,8 @@ public class JwtTokenSignedByThisUAATest {
     private List<String> logEvents;
     private AbstractAppender appender;
 
-    public JwtTokenSignedByThisUAATest() throws ParseException {
-    }
-
-    @Before
-    public void setupLogger() {
+    @BeforeEach
+    void setupLogger() {
         logEvents = new ArrayList<>();
         appender = new AbstractAppender("", null, null) {
             @Override
@@ -139,33 +126,31 @@ public class JwtTokenSignedByThisUAATest {
         context.getRootLogger().addAppender(appender);
     }
 
-    @After
-    public void resetStdout() {
+    @AfterEach
+    void resetStdout() {
         LoggerContext context = (LoggerContext) LogManager.getContext(false);
         context.getRootLogger().removeAppender(appender);
     }
 
-    @BeforeClass
-    public static void beforeClass() {
+    @BeforeAll
+    static void beforeClass() {
         TestUtils.resetIdentityZoneHolder(null);
     }
 
-    @AfterClass
-    public static void afterClass() {
+    @AfterAll
+    static void afterClass() {
         TestUtils.resetIdentityZoneHolder(null);
     }
 
-    @Rule
-    public ExpectedException expectedException = ExpectedException.none();
-    private static final String macSigningKeySecret = "foobarfoobarfoobarfoobarfoobarfoofoobarfoobarfoobarfoobarfoobarfoobar";
+    private static final String MAC_SIGNING_KEY_SECRET = "foobarfoobarfoobarfoobarfoobarfoofoobarfoobarfoobarfoobarfoobarfoobar";
 
-    @Before
-    public void setup() throws KeyLengthException {
+    @BeforeEach
+    void setup() {
         String defaultKeyId = "some-key-id";
 
         IdentityZone uaaZone = IdentityZone.getUaa();
         uaaZone.getConfig().getTokenPolicy().setKeys(
-                map(entry(defaultKeyId, macSigningKeySecret))
+                map(entry(defaultKeyId, MAC_SIGNING_KEY_SECRET))
         );
         IdentityZoneProvisioning identityZoneProvisioning = mock(IdentityZoneProvisioning.class);
         when(identityZoneProvisioning.retrieve(anyString())).thenReturn(uaaZone);
@@ -200,8 +185,7 @@ public class JwtTokenSignedByThisUAATest {
                 entry("aud", Arrays.asList("app", "acme")),
                 entry("revocable", true)
         );
-
-        signer = new UaaMacSigner(new SecretKeySpec(macSigningKeySecret.getBytes(StandardCharsets.UTF_8), "HS256"));
+        signer = new UaaMacSigner(new SecretKeySpec(MAC_SIGNING_KEY_SECRET.getBytes(StandardCharsets.UTF_8), "HS256"));
 
         IdentityZoneManager mockIdentityZoneManager = mock(IdentityZoneManager.class);
         when(mockIdentityZoneManager.getCurrentIdentityZoneId()).thenReturn(IdentityZone.getUaaZoneId());
@@ -223,44 +207,42 @@ public class JwtTokenSignedByThisUAATest {
                 .withAuthorities(Collections.singletonList(new SimpleGrantedAuthority("acme.dev"))));
 
         uaaUser = userDb.retrieveUserById(USER_ID);
-        uaaUserGroups = uaaUser.getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList());
+        uaaUserGroups = new ArrayList<>(uaaUser.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList());
     }
 
     @Test
-    public void validate_KeyId_isPresent() {
+    void validate_KeyId_isPresent() {
         header = map(entry("alg", "HS256"));
-
-        expectedException.expectMessage("kid claim not found in JWT token header");
-
-        assertThat(buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost")), notNullValue());
+        assertThatThrownBy(() -> assertThat(buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))))
+                .isInstanceOf(Exception.class)
+                .hasMessageContaining("kid claim not found in JWT token header");
     }
 
     @Test
-    public void validate_KeyId_actuallyExists() {
+    void validate_KeyId_actuallyExists() {
         String kid = "garbage";
         header.put("kid", kid);
-
-        expectedException.expectMessage("Token header claim [kid] references unknown signing key : [garbage]");
-
-        JwtTokenSignedByThisUAA.buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"));
+        assertThatThrownBy(() -> JwtTokenSignedByThisUAA.buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost")))
+                .isInstanceOf(Exception.class)
+                .hasMessageContaining("Token header claim [kid] references unknown signing key : [garbage]");
     }
 
     @Test
-    public void validation_succeeds_with_different_alg() {
+    void validation_succeeds_with_different_alg() {
         header.put("alg", "HS512");
         JwtTokenSignedByThisUAA jwtTokenSignedByThisUAA = buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
                 .checkIssuer("http://localhost:8080/uaa/oauth/token")
                 .checkSignature();
-        assertThat(jwtTokenSignedByThisUAA, notNullValue());
-        assertThat(jwtTokenSignedByThisUAA.toString(), notNullValue());
-        assertThat(jwtTokenSignedByThisUAA.getJwt().toString(), notNullValue());
-        assertThat(jwtTokenSignedByThisUAA.getJwt().getHeader().toString(), notNullValue());
-        assertThat(jwtTokenSignedByThisUAA.getJwt().getEncoded(), notNullValue());
-        assertThat(jwtTokenSignedByThisUAA.getJwt().getHeader().getAlg(), containsString("HS512"));
+        assertThat(jwtTokenSignedByThisUAA).isNotNull();
+        assertThat(jwtTokenSignedByThisUAA.toString()).isNotNull();
+        assertThat(jwtTokenSignedByThisUAA.getJwt().toString()).isNotNull();
+        assertThat(jwtTokenSignedByThisUAA.getJwt().getHeader().toString()).isNotNull();
+        assertThat(jwtTokenSignedByThisUAA.getJwt().getEncoded()).isNotNull();
+        assertThat(jwtTokenSignedByThisUAA.getJwt().getHeader().getAlg()).contains("HS512");
     }
 
     @Test
-    public void validation_with_rs256_rs384_and_rs512_algorithm() {
+    void validation_with_rs256_rs384_and_rs512_algorithm() {
         IdentityZone uaaZone = IdentityZone.getUaa();
         uaaZone.getConfig().getTokenPolicy().setKeys(
                 map(entry("0", """
@@ -322,59 +304,53 @@ public class JwtTokenSignedByThisUAATest {
     }
 
     @Test
-    public void testGetClientById() {
+    void getClientById() {
         String token = getToken();
-
-
         ClientDetails clientDetails = JwtTokenSignedByThisUAA.buildAccessTokenValidator(token, new KeyInfoService("https://localhost"))
                 .getClientDetails(inMemoryMultitenantClientServices);
 
-        assertThat(clientDetails.getClientId(), equalTo(content.get("cid")));
+        assertThat(clientDetails.getClientId()).isEqualTo(content.get("cid"));
     }
 
     @Test
-    public void testGetClientById_invalidId() {
+    void getClientByIdInvalidId() {
         String invalidClientId = "invalid-client-id";
         content.put("cid", invalidClientId);
         String token = getToken();
-
-        expectedException.expect(InvalidTokenException.class);
-        expectedException.expectMessage("Invalid client ID " + invalidClientId);
-
-        JwtTokenSignedByThisUAA.buildAccessTokenValidator(token, new KeyInfoService("https://localhost")).getClientDetails(inMemoryMultitenantClientServices);
+        assertThatThrownBy(() -> JwtTokenSignedByThisUAA.buildAccessTokenValidator(token, new KeyInfoService("https://localhost")).getClientDetails(inMemoryMultitenantClientServices))
+                .isInstanceOf(InvalidTokenException.class)
+                .hasMessageContaining("Invalid client ID " + invalidClientId);
     }
 
     @Test
-    public void testGetUserById() {
+    void getUserById() {
         String token = getToken();
 
         UaaUser user = JwtTokenSignedByThisUAA.buildAccessTokenValidator(token, new KeyInfoService("https://localhost")).getUserDetails(userDb);
 
-        assertThat(user, notNullValue());
-        assertThat(user.getUsername(), equalTo("marissa"));
-        assertThat(user.getEmail(), equalTo("marissa@test.org"));
+        assertThat(user).isNotNull();
+        assertThat(user.getUsername()).isEqualTo("marissa");
+        assertThat(user.getEmail()).isEqualTo("marissa@test.org");
     }
 
     @Test
-    public void testGetUserById_notUserToken() {
+    void getUserByIdNotUserToken() {
         content.put("grant_type", "client_credentials");
         String token = getToken();
 
         UaaUser user = JwtTokenSignedByThisUAA.buildAccessTokenValidator(token, new KeyInfoService("https://localhost")).getUserDetails(userDb);
 
-        assertThat(user, nullValue());
+        assertThat(user).isNull();
     }
 
     @Test
-    public void testGetUserById_invalidUserId() {
+    void getUserByIdInvalidUserId() {
         String invalidUserId = "invalid-user-id";
         content.put(ClaimConstants.USER_ID, invalidUserId);
         String token = getToken();
-
-        expectedException.expect(InvalidTokenException.class);
-        expectedException.expectMessage("Token bears a non-existent user ID: " + invalidUserId);
-
-        JwtTokenSignedByThisUAA.buildAccessTokenValidator(token, new KeyInfoService("https://localhost")).getUserDetails(userDb);
+        assertThatThrownBy(() -> JwtTokenSignedByThisUAA.buildAccessTokenValidator(token, new KeyInfoService("https://localhost")).getUserDetails(userDb))
+                .isInstanceOf(InvalidTokenException.class)
+                .hasMessageContaining("Token bears a non-existent user ID: " + invalidUserId);
     }
 
     private String getToken() {
@@ -390,7 +366,7 @@ public class JwtTokenSignedByThisUAATest {
     }
 
     @Test
-    public void validate_required_groups_is_invoked() {
+    void validate_required_groups_is_invoked() {
         JwtTokenSignedByThisUAA jwtToken = spy(buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost")));
 
         jwtToken.checkClientAndUser(uaaClient, uaaUser);
@@ -421,7 +397,7 @@ public class JwtTokenSignedByThisUAATest {
     }
 
     @Test
-    public void required_groups_are_present() {
+    void required_groups_are_present() {
         JwtTokenSignedByThisUAA jwtToken = buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"));
         uaaClient.addAdditionalInformation(REQUIRED_USER_GROUPS, uaaUserGroups);
 
@@ -429,19 +405,17 @@ public class JwtTokenSignedByThisUAATest {
     }
 
     @Test
-    public void required_groups_are_missing() {
+    void required_groups_are_missing() {
         JwtTokenSignedByThisUAA jwtToken = buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"));
         uaaUserGroups.add("group-missing-from-user");
         uaaClient.addAdditionalInformation(REQUIRED_USER_GROUPS, uaaUserGroups);
-
-        expectedException.expect(InvalidTokenException.class);
-        expectedException.expectMessage("User does not meet the client's required group criteria.");
-
-        jwtToken.checkClientAndUser(uaaClient, uaaUser);
+        assertThatThrownBy(() -> jwtToken.checkClientAndUser(uaaClient, uaaUser))
+                .isInstanceOf(InvalidTokenException.class)
+                .hasMessageContaining("User does not meet the client's required group criteria.");
     }
 
     @Test
-    public void checking_token_happy_case() {
+    void checking_token_happy_case() {
         buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
                 .checkIssuer("http://localhost:8080/uaa/oauth/token")
                 .checkClient(clientId -> inMemoryMultitenantClientServices.loadClientByClientId(clientId))
@@ -455,17 +429,15 @@ public class JwtTokenSignedByThisUAATest {
     }
 
     @Test
-    public void checkJti_givenRefreshToken() {
+    void checkJti_givenRefreshToken() {
         content.put(JTI, "8b14f193-8212-4af2-9927-e3ae903f94a6-r");
-
-        expectedException.expect(InvalidTokenException.class);
-        expectedException.expectMessage("Invalid access token.");
-
-        buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost")).checkJti();
+        assertThatThrownBy(() -> buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost")).checkJti())
+                .isInstanceOf(InvalidTokenException.class)
+                .hasMessageContaining("Invalid access token.");
     }
 
     @Test
-    public void checkJti_with_dashR_in_JTI_should_not_fail_validation() {
+    void checkJti_with_dashR_in_JTI_should_not_fail_validation() {
         String dashR = "-r";
         content.put(JTI, "8b14f193" + dashR + "-8212-4af2-9927-e3ae903f94a6");
 
@@ -474,18 +446,15 @@ public class JwtTokenSignedByThisUAATest {
     }
 
     @Test
-    public void checkJti_without_jti_should_fail_validation() {
+    void checkJti_without_jti_should_fail_validation() {
         content.put(JTI, null);
-
-        expectedException.expect(InvalidTokenException.class);
-        expectedException.expectMessage("The token must contain a jti claim.");
-
-        buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
-                .checkJti();
+        assertThatThrownBy(() -> buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost")).checkJti())
+                .isInstanceOf(InvalidTokenException.class)
+                .hasMessageContaining("The token must contain a jti claim.");
     }
 
     @Test
-    public void validateToken_Without_Email_And_Username_should_not_throw_exception() {
+    void validateToken_Without_Email_And_Username_should_not_throw_exception() {
         buildAccessTokenValidator(
                 getToken(Arrays.asList(EMAIL, USER_NAME)), new KeyInfoService("https://localhost"))
                 .checkSignature(verifier)
@@ -500,138 +469,125 @@ public class JwtTokenSignedByThisUAATest {
     }
 
     @Test
-    public void buildIdTokenValidator_performsSignatureValidation() {
+    void buildIdTokenValidator_performsSignatureValidation() {
         ChainedSignatureVerifier signatureVerifier = mock(ChainedSignatureVerifier.class);
-        when(signatureVerifier.getDelegates()).thenReturn(Arrays.asList(verifier));
+        when(signatureVerifier.getDelegates()).thenReturn(List.of(verifier));
         buildIdTokenValidator(getToken(), signatureVerifier, new KeyInfoService("https://localhost"));
 
         verify(signatureVerifier).getDelegates();
     }
 
     @Test
-    public void idTokenValidator_rejectsTokensWithRefreshTokenSuffix() {
-        expectedException.expect(InvalidTokenException.class);
-
+    void idTokenValidator_rejectsTokensWithRefreshTokenSuffix() {
         content.put(JTI, "asdfsafsa-r");
-        buildIdTokenValidator(getToken(), mock(ChainedSignatureVerifier.class), new KeyInfoService("https://localhost")).checkJti();
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                buildIdTokenValidator(getToken(), mock(ChainedSignatureVerifier.class), new KeyInfoService("https://localhost")).checkJti());
     }
 
     @Test
-    public void idTokenValidator_findsScopesFromScopeClaim() {
+    void idTokenValidator_findsScopesFromScopeClaim() {
         content.put(SCOPE, Lists.newArrayList("openid"));
         content.put(GRANTED_SCOPES, Lists.newArrayList("foo.read"));
         ChainedSignatureVerifier validator = mock(ChainedSignatureVerifier.class);
-        when(validator.getDelegates()).thenReturn(Arrays.asList(verifier));
+        when(validator.getDelegates()).thenReturn(List.of(verifier));
 
         List<String> scopes = buildIdTokenValidator(getToken(), validator, new KeyInfoService("https://localhost")).requestedScopes();
-        assertThat(scopes, equalTo(Lists.newArrayList("openid")));
+        assertThat(scopes).isEqualTo(Lists.newArrayList("openid"));
     }
 
     @Test
-    public void tokenSignedWithDifferentKey() throws KeyLengthException {
+    void tokenSignedWithDifferentKey() {
         signer = new UaaMacSigner(new SecretKeySpec("some_other_key".getBytes(), "HS256"));
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
 
-        expectedException.expect(InvalidTokenException.class);
-
-        buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
-                .checkSignature(verifier);
+                buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
+                        .checkSignature(verifier));
     }
 
     @Test
-    public void invalidJwt() {
-        expectedException.expect(InvalidTokenException.class);
-
-        buildAccessTokenValidator("invalid.jwt.token", new KeyInfoService("https://localhost"));
+    void invalidJwt() {
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                buildAccessTokenValidator("invalid.jwt.token", new KeyInfoService("https://localhost")));
     }
 
     @Test
-    public void tokenWithInvalidIssuer() {
-        expectedException.expect(InvalidTokenException.class);
-
-        buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost")).checkIssuer("http://wrong.issuer/");
+    void tokenWithInvalidIssuer() {
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost")).checkIssuer("http://wrong.issuer/"));
     }
 
     @Test
-    public void emptyBodyJwt_failsCheckingIssuer() {
+    void emptyBodyJwt_failsCheckingIssuer() {
         content.remove("iss");
         JwtTokenSignedByThisUAA jwtToken = buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"));
-
-        expectedException.expect(InvalidTokenException.class);
-        jwtToken.checkIssuer("http://localhost:8080/uaa/oauth/token");
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                jwtToken.checkIssuer("http://localhost:8080/uaa/oauth/token"));
     }
 
     @Test
-    public void emptyBodyJwt_failsCheckingExpiry() {
+    void emptyBodyJwt_failsCheckingExpiry() {
         content.remove("exp");
         JwtTokenSignedByThisUAA jwtToken = buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"));
-
-        expectedException.expect(InvalidTokenException.class);
-        jwtToken.checkExpiry(oneSecondBeforeTheTokenExpires);
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                jwtToken.checkExpiry(oneSecondBeforeTheTokenExpires));
     }
 
     @Test
-    public void expiredToken() {
+    void expiredToken() {
         content.put("iat", 1458997132);
         content.put("exp", 1458997132);
-        expectedException.expect(InvalidTokenException.class);
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
 
-        buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
-                .checkExpiry(oneSecondAfterTheTokenExpires);
+                buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
+                        .checkExpiry(oneSecondAfterTheTokenExpires));
     }
 
     @Test
-    public void nonExistentUser() {
+    void nonExistentUser() {
         UaaUserDatabase userDb = new InMemoryUaaUserDatabase(Collections.emptySet());
-        expectedException.expect(InvalidTokenException.class);
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
 
-        buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
-                .checkUser(userDb::retrieveUserById);
-
+                buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
+                        .checkUser(userDb::retrieveUserById));
     }
 
     @Test
-    public void userHadScopeRevoked() {
+    void userHadScopeRevoked() {
         UaaUserDatabase userDb = new MockUaaUserDatabase(u -> u
                 .withUsername("marissa")
                 .withId("a7f07bf6-e720-4652-8999-e980189cef54")
                 .withEmail("marissa@test.org")
                 .withAuthorities(Collections.singletonList(new SimpleGrantedAuthority("a.different.scope"))));
-
-        expectedException.expect(InvalidTokenException.class);
-
-        buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
-                .checkUser(userDb::retrieveUserById);
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
+                        .checkUser(userDb::retrieveUserById));
     }
 
     @Test
-    public void tokenHasInsufficientScope() {
-        expectedException.expect(InvalidTokenException.class);
-
-        buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
-                .checkRequestedScopesAreGranted("a.different.scope");
+    void tokenHasInsufficientScope() {
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
+                        .checkRequestedScopesAreGranted("a.different.scope"));
     }
 
     @Test
-    public void tokenContainsRevokedScope() {
-        expectedException.expect(InvalidTokenException.class);
-
-        buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
-                .checkRequestedScopesAreGranted("a.different.scope");
+    void tokenContainsRevokedScope() {
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
+                        .checkRequestedScopesAreGranted("a.different.scope"));
     }
 
     @Test
-    public void nonExistentClient() {
+    void nonExistentClient() {
         InMemoryClientDetailsService clientDetailsService = new InMemoryClientDetailsService();
         clientDetailsService.setClientDetailsStore(Collections.emptyMap());
-
-        expectedException.expect(InvalidTokenException.class);
-
-        buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
-                .checkClient(clientDetailsService::loadClientByClientId);
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
+                        .checkClient(clientDetailsService::loadClientByClientId));
     }
 
     @Test
-    public void clientHasScopeRevoked() {
+    void clientHasScopeRevoked() {
         InMemoryClientDetailsService clientDetailsService = new InMemoryClientDetailsService();
         clientDetailsService.setClientDetailsStore(
                 Collections.singletonMap(
@@ -639,23 +595,20 @@ public class JwtTokenSignedByThisUAATest {
                         new UaaClientDetails("app", "acme", "a.different.scope", GRANT_TYPE_AUTHORIZATION_CODE, "")
                 )
         );
-
-        expectedException.expect(InvalidTokenException.class);
-
-        buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
-                .checkClient(clientDetailsService::loadClientByClientId);
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
+                        .checkClient(clientDetailsService::loadClientByClientId));
     }
 
     @Test
-    public void clientRevocationHashChanged() {
-        expectedException.expect(InvalidTokenException.class);
-
-        buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
-                .checkRevocationSignature(Collections.singletonList("New-Hash"));
+    void clientRevocationHashChanged() {
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
+                        .checkRevocationSignature(Collections.singletonList("New-Hash")));
     }
 
     @Test
-    public void clientRevocationHashChanged_and_Should_Pass() {
+    void clientRevocationHashChanged_and_Should_Pass() {
         buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
                 .checkRevocationSignature(Arrays.asList("fa1c787d", "New-Hash"));
 
@@ -664,43 +617,39 @@ public class JwtTokenSignedByThisUAATest {
     }
 
     @Test
-    public void incorrectAudience() {
-        expectedException.expect(InvalidTokenException.class);
-
-        buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
-                .checkAudience("app", "somethingelse");
+    void incorrectAudience() {
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
+                        .checkAudience("app", "somethingelse"));
     }
 
     @Test
-    public void emptyAudience() {
-        expectedException.expect(InvalidTokenException.class);
-
-        buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
-                .checkAudience("");
+    void emptyAudience() {
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
+                        .checkAudience(""));
     }
 
     @Test
-    public void tokenIsRevoked() {
+    void tokenIsRevoked() {
         RevocableTokenProvisioning revocableTokenProvisioning = mock(RevocableTokenProvisioning.class);
         when(revocableTokenProvisioning.retrieve(
                 "8b14f193-8212-4af2-9927-e3ae903f94a6",
                 IdentityZoneHolder.get().getId()
         )).thenThrow(new EmptyResultDataAccessException(1));
 
-        expectedException.expect(InvalidTokenException.class);
-
-        buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
-                .checkRevocableTokenStore(revocableTokenProvisioning);
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
+                        .checkRevocableTokenStore(revocableTokenProvisioning));
     }
 
     @Test
-    public void nonRevocableToken() {
+    void nonRevocableToken() {
         revocableTokenProvisioning = mock(RevocableTokenProvisioning.class);
         when(revocableTokenProvisioning.retrieve("8b14f193-8212-4af2-9927-e3ae903f94a6", IdentityZoneHolder.get().getId()))
                 .thenThrow(new EmptyResultDataAccessException(1)); // should not occur
 
         content.remove("revocable");
-
         buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
                 .checkRevocableTokenStore(revocableTokenProvisioning);
 
@@ -708,114 +657,99 @@ public class JwtTokenSignedByThisUAATest {
     }
 
     @Test
-    public void validateRefreshToken_happycase() {
+    void validateRefreshToken_happycase() {
         // Build a refresh token
         content.remove(SCOPE);
         content.put(JTI, content.get(JTI) + "-r");
         content.put(GRANTED_SCOPES, Collections.singletonList("some-granted-scope"));
 
         String refreshToken = getToken();
-
         buildRefreshTokenValidator(refreshToken, new KeyInfoService("https://localhost"))
                 .checkRequestedScopesAreGranted("some-granted-scope");
     }
 
     @Test
-    public void checkRequestedScopesAreGranted_withScopeClaimAndNotGrantedScopeClaim_happycase() {
+    void checkRequestedScopesAreGranted_withScopeClaimAndNotGrantedScopeClaim_happycase() {
         // Build a refresh token
         content.put(JTI, content.get(JTI) + "-r");
         content.put(SCOPE, Collections.singletonList("some-granted-scope"));
         content.remove(GRANTED_SCOPES);
 
         String refreshToken = getToken();
-
         buildRefreshTokenValidator(refreshToken, new KeyInfoService("https://localhost"))
                 .checkRequestedScopesAreGranted("some-granted-scope");
     }
 
     @Test
-    public void checkRequestedScopesAreGranted_withScopeClaimAndGrantedScopeClaim_happycase() {
+    void checkRequestedScopesAreGranted_withScopeClaimAndGrantedScopeClaim_happycase() {
         // Build a refresh token
         content.put(JTI, content.get(JTI) + "-r");
         content.put(SCOPE, Collections.singletonList("another-granted-scope"));
         content.put(GRANTED_SCOPES, Collections.singletonList("some-granted-scope"));
 
         String refreshToken = getToken();
-
         buildRefreshTokenValidator(refreshToken, new KeyInfoService("https://localhost"))
                 .checkRequestedScopesAreGranted("some-granted-scope");
 
-        assertThat(logEvents, not(hasItems(containsString("ERROR"))));
-        assertThat(logEvents, not(hasItems(containsString("error"))));
+        assertThat(logEvents).doesNotContain("ERROR", "error");
     }
 
     @Test
-    public void checkRequestedScopesAreGranted_should_fail_when_missing_scopes() {
-        // Build a refresh token
+    void checkRequestedScopesAreGranted_should_fail_when_missing_scopes() {
         content.put(JTI, content.get(JTI) + "-r");
         content.put(GRANTED_SCOPES, Arrays.asList("some-granted-scope", "bruce", "josh"));
-
         String refreshToken = getToken();
-
-        expectedException.expectMessage(
-                "Some required \"granted_scopes\" are missing: [some-granted-scope, bruce, josh]"
-        );
-
-        buildRefreshTokenValidator(refreshToken, new KeyInfoService("https://localhost"))
-                .checkRequestedScopesAreGranted((Collection) content.get(SCOPE));
+        assertThatThrownBy(() ->
+                buildRefreshTokenValidator(refreshToken, new KeyInfoService("https://localhost"))
+                        .checkRequestedScopesAreGranted((Collection) content.get(SCOPE)))
+                .isInstanceOf(InvalidTokenException.class)
+                .hasMessageContaining("Some required \"granted_scopes\" are missing: [some-granted-scope, bruce, josh]");
     }
 
     @Test
-    public void checkRequestedScopesAreGranted_ignoresGrantedScopesClaim() {
+    void checkRequestedScopesAreGranted_ignoresGrantedScopesClaim() {
         List<String> grantedScopes = Collections.singletonList("some-granted-scope");
         content.put(GRANTED_SCOPES, grantedScopes);
         content.remove(SCOPE);
         String refreshToken = getToken();
 
         String expectedErrorMessage = "The token does not bear a \"scope\" claim.";
-        expectedException.expect(InvalidTokenException.class);
-        expectedException.expectMessage(expectedErrorMessage);
-
         JwtTokenSignedByThisUAA jwtToken = buildAccessTokenValidator(
                 refreshToken,
                 new KeyInfoService("https://localhost")
         );
-
-        try {
-            jwtToken.checkRequestedScopesAreGranted(grantedScopes);
-        } catch (InvalidTokenException e) {
-            assertThat(logEvents, hasItem("ERROR -- " + expectedErrorMessage));
-            throw e; // rethrow so that expectedException can see the exception
-        }
+        assertThatThrownBy(() -> jwtToken.checkRequestedScopesAreGranted(grantedScopes))
+                .isInstanceOf(InvalidTokenException.class)
+                .hasMessageContaining(expectedErrorMessage);
+        assertThat(logEvents).contains("ERROR -- " + expectedErrorMessage);
     }
 
     @Test
-    public void getScopes_rejects_invalid_scope_claim() {
+    void getScopes_rejects_invalid_scope_claim() {
         content.put(SCOPE, "i am not a list!!!");
         String refreshToken = getToken();
-
-        expectedException.expect(InvalidTokenException.class);
-        expectedException.expectMessage("The token's \"scope\" claim is invalid or unparseable.");
-
-        buildAccessTokenValidator(refreshToken, new KeyInfoService("https://localhost"))
-                .requestedScopes();
+        assertThatThrownBy(() ->
+                buildAccessTokenValidator(refreshToken, new KeyInfoService("https://localhost"))
+                        .requestedScopes())
+                .isInstanceOf(InvalidTokenException.class)
+                .hasMessageContaining("The token's \"scope\" claim is invalid or unparseable.");
     }
 
     @Test
-    public void readScopesFromClaim_rejects_non_string_scopes() {
+    void readScopesFromClaim_rejects_non_string_scopes() {
         content.put(SCOPE, Arrays.asList("hello", 1L));
         String refreshToken = getToken();
-
-        expectedException.expect(InvalidTokenException.class);
-        expectedException.expectMessage("The token's \"scope\" claim is invalid or unparseable.");
-
-        buildAccessTokenValidator(refreshToken, new KeyInfoService("https://localhost"))
-                .requestedScopes();
+        assertThatThrownBy(() ->
+                buildAccessTokenValidator(refreshToken, new KeyInfoService("https://localhost"))
+                        .requestedScopes())
+                .isInstanceOf(InvalidTokenException.class)
+                .hasMessageContaining("The token's \"scope\" claim is invalid or unparseable.");
     }
 
-    @Test(expected = InvalidTokenException.class)
-    public void nullUserIsCaught() {
-        buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
-                .checkUser(uid -> null);
+    @Test
+    void nullUserIsCaught() {
+        assertThatExceptionOfType(InvalidTokenException.class).isThrownBy(() ->
+                buildAccessTokenValidator(getToken(), new KeyInfoService("https://localhost"))
+                        .checkUser(uid -> null));
     }
 }
